Added scripts and working well

--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -109,21 +109,21 @@ Programatzaileek idatzi ohi duten lehen programa mezu bat pantailatik ateratzea 
 
 Honela egiten da:
 
-``python '
+```python
 
 print ("Kaixo mundua!")
 
-``i
+```
 
 Hori frogatzen baduzu, pantailatik horrelako zerbait ikusi beharko zenuke:
 
 
 
-```kontsolamendu
+```console
 
 Kaixo mundua!
 
-``i
+```
 
 
 
@@ -133,17 +133,17 @@ Python lengoaiaren funtzio bat da, mezuak pantailan erakusteko aukera ematen dig
 
 KONTUZ! Kapitulu honetakoak bezalako programa oso sinpleetan, saiatu ez jartzen tarterik programaren jarraibideen aurretik, edo Pythonek errore bat emango du:
 
-``python '
+```python
 
 print ("Kaixo mundua!")
 
-``i
+```
 
 Oker legoke:
 
 
 
-```kontsolamendu
+```console
 
 print ("Kaixo mundua!")
 
@@ -151,7 +151,7 @@ print ("Kaixo mundua!")
 
 IndentationError: unexpected indent
 
-``i
+```
 
 Python-en espazioak edo tabulazioak gehitzen dira kodea beste bloke batzuen barruan dagoela adierazteko, pixkanaka ikusiko duzun bezala. Oraingoz, kapitulu honetarako, hasi zure kodea lerroaren hasieratik.
 
@@ -162,21 +162,21 @@ Idatzi zure izena pantaila bidez erakusten duen programa bat.
 
 
 
-``python '
+```python
 
 print ("Kaixo Ada naiz")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Kaixo, Ada naiz.
 
-``i
+```
 
 
 
@@ -184,15 +184,15 @@ KONTUZ! Python hizkuntzan oso garrantzitsua da lerroaren hasieran tabulaziorik e
 
 
 
-``python '
+```python
 
 print ("Kaixo mundua!")
 
-``i
+```
 
 
 
-# #Iruzkinak
+## Iruzkinak
 
 
 
@@ -206,7 +206,7 @@ Programa batean, iruzkinak jar daitezke. Exekutatzen ez den testua da, ordenagai
 
 print ("Kaixo")
 
-``i
+```
 
 Pythonek ez dio jaramonik egiten iruzkinari, eta "Telefonoa pantailan" erakutsiko du.
 
@@ -226,7 +226,7 @@ eta Nekok berrikusia
 
 ""
 
-``i
+```
 Batzuetan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kodearen zati bat "desaktibatzeko".
 
 
@@ -245,7 +245,7 @@ Python aldagai bat definitzeko, nahikoa da bere izena adieraztea eta balioren ba
 
 izena = "Ada"
 
-``i
+```
 
 
 "Ada" balioa duen aldagai bat sortu berri dugu. "Ada" datu bat da, eta testu motakoa da. Orain, aldagai horren balioa bistara dezakegu pantailan:
@@ -256,17 +256,17 @@ izena = "Ada"
 
 print (izena)
 
-``i
+```
 
 Pantaila bidez,
 
 
 
-```kontsolamendu
+```console
 
 Ada
 
-``i
+```
 
 Edozein unetan alda dezakegu aldagai horren balioa:
 
@@ -280,17 +280,17 @@ izena = "Neko"
 
 print (izena)
 
-``i
+```
 
 Eta pantailan ikusiko dugu:
 
-```kontsolamendu
+```console
 
 Ada
 
 Neko
 
-``i
+```
 
 
 
@@ -302,7 +302,7 @@ Horretarako hainbat aukera daude:
 
 
 
-# #Komen bidez bereizi
+## Komen bidez bereizi
 
 Nahikoa da aldagaiak eta testua komekin tartekatzea:
 
@@ -316,19 +316,19 @@ print ("Kaixo, izena dut", izena)
 
 print ("Naiz", izena, "dut", adina, "urteak")
 
-``i
+```
 
 Pantaila bidez,
 
 
 
-```kontsolamendu
+```console
 
 Kaixo, Bug dut izena.
 
 Bug naiz, 10 urte ditut.
 
-``i
+```
 
 
 
@@ -338,7 +338,7 @@ Sortu bi aldagai `izen eta edadetu, eta erakutsi haien balioa pantailan.
 
 
 
-``python '
+```python
 
 izena = "Ada"
 
@@ -351,21 +351,21 @@ print ("Zure izena da", izena, "duzu", adina, "urteak")
 
 #print ("Zure izena % s da, % d urte dituzu" % (izena, adina)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Zure izena Ada da eta 14 urte dituzu.
 
-``i
+```
 
 
 
-# #Formatuko stringa
+## Formatuko stringa
 
 Aldagai bat baino gehiago erakusteko beste modu bat mezu bat da. Aurretik, "f" letra eta giltzen arteko aldagaiak daude:
 
@@ -379,25 +379,25 @@ print (f "Kaixo, {izena} dut izena")
 
 print (f "{izena} naiz {} urte ditut")
 
-``i
+```
 
 Pantaila bidez,
 
 
 
-```kontsolamendu
+```console
 
 Kaixo, Bug dut izena.
 
 Bug naiz, 10 urte ditut.
 
-``i
+```
 
 KONTUZ, aukera hau Python 3.6tik bakarrik dago eskuragarri
 
 
 
-# #Ehunekoa ordeztea
+## Ehunekoa ordeztea
 
 Aldagaiak pantaila bidez erakusteko beste aukera bat. % s elementuak aldagaiekin ordezkatzen dituen mezu bat sortzen da.
 
@@ -405,17 +405,17 @@ Aldagaiak pantaila bidez erakusteko beste aukera bat. % s elementuak aldagaiekin
 
 print ("Kaixo, % s dut izena" % izena)
 
-``i
+```
 
 Pantaila bidez,
 
 
 
-```kontsolamendu
+```console
 
 Kaixo, Ada dut izena.
 
-``i
+```
 
 
 
@@ -431,16 +431,16 @@ adina = 5
 
 print ("Kaixo, % s dut izena eta % d urte ditut" % (izena, adina)
 
-``i
+```
 Pantaila bakoitzeko:
 
 
 
-```kontsolamendu
+```console
 
 Kaixo, Neko dut izena eta 5 urte ditut.
 
-``i
+```
 
 
 
@@ -462,7 +462,7 @@ Jarraian, oinarrizko datu motak ikusiko ditugu.
 
 
 
-# #Zenbakiak
+## Zenbakiak
 Mota guztietako zenbakiak dira:
 
 - Osoak:
@@ -471,13 +471,13 @@ Mota guztietako zenbakiak dira:
 
 
 
-``python '
+```python
 
 kontagailua = 10
 
 adina = 12
 
-``i
+```
 
 
 
@@ -487,13 +487,13 @@ Zenbaki hamartarrak, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `., e
 
 
 
-``python '
+```python
 
 pisua = 34.67
 
 prezioa = 242.9943
 
-``i
+```
 
 
 
@@ -503,23 +503,23 @@ prezioa = 242.9943
 
 
 
-``python '
+```python
 
 oharra = -5
 
 tenperaturaMarten = -50.676
 
-``i
+```
 
 
 
-# #Testua
+## Testua
 
 Testua, kateak edo* strings* ere deituak, komatxo bikoitz edo sinpleen arteko edozein hitz-multzo da.
 
 
 
-``python '
+```python
 
 izena = "Ada"
 
@@ -529,7 +529,7 @@ hitzak = 'Lanera noa'
 
 novia = 'Lagunak izatea besterik ez dut nahi'
 
-``i
+```
 Testuaren kasuan, zenbait karaktere berezi sar ditzakegu, ondorio interesgarriak izateko. Karaktere horiek kontra-barra batekin edo* backslash* batekin idazten dira aurretik.
 
 
@@ -540,11 +540,11 @@ Horrek lerro-jauzi bat gehitzen dio testuari, pantaila bidez erakusten bada:
 
 
 
-``python '
+```python
 
 esaldia = "Kaixo,\n zer moduz"
 
-``i
+```
 
 honela erakutsiko da:
 
@@ -554,7 +554,7 @@ Kaixo,
 
 zer moduz
 
-``i
+```
 
 
 
@@ -562,7 +562,7 @@ Hainbat lerrotako testu bat ere defini daiteke:
 
 
 
-``python '
+```python
 
 Igande bat zen.
 
@@ -572,7 +572,7 @@ autoetara joan nintzen
 
 talka "" "
 
-``i
+```
 
 
 
@@ -582,11 +582,11 @@ Horrek tabulazio bat (hainbat espazio) gehitzen dio testuari, pantaila bidez era
 
 
 
-``python '
+```python
 
 esaldia = "Izena\Abizena\Adina"
 
-``i
+```
 
 honela erakutsiko da:
 
@@ -594,7 +594,7 @@ honela erakutsiko da:
 
 Izena Abizena Adina
 
-``i
+```
 
 Beste karaktere berezi batzuk:
 
@@ -610,14 +610,14 @@ Beste karaktere berezi batzuk:
 
 
 
-# #Boolearrak
+## Boolearrak
 
 Boolear motak bi balio posible bakarrik izan ditzake:
 Datuak, hau da, egiazkoak edo okerrak. Programazioan funtsezko datua da, erabakiak hartzeko erabiltzen baita.
 
 
 
-``python '
+```python
 
 amaituta = False
 
@@ -625,27 +625,27 @@ esMayor = True
 
 pythonMola = True
 
-``i
+```
 
 
 
-# #Zerrendak
+## Zerrendak
 
 Zerrendak datu-multzoak dira, eta honela definitzen dira:
 
 
 
-``python '
+```python
 
 lagunak = ["Ada", "Miranda", "Ruby"]
 
-``i
+```
 
 Edozein motatakoak izan daitezke, baina normalena da zerrenda bateko elementu guztiak mota berekoak izatea:
 
 
 
-``python '
+```python
 
 etsaiak = []
 
@@ -653,36 +653,36 @@ etsaiak = []
 
 egiak = [True, False, False, True]
 
-``i
+```
 
 Zerrendako balio zehatz bat adierazteko, interesatzen zaigun zerrendako elementuaren posizioa adierazi behar dugu, 0tik hasita:
 
 
 
-``python '
+```python
 
 izenak = ["Ada", "Neko", "Bug"]
 
 print (izenak [0]) # "Ada"
 
-``i
+```
 
 Izendapenen zerrendaren kasuan, posizio posibleak 0, 1 eta 2 izango dira.
 
 Baina kontuz! Posizio handiegia pasatzen baduzu, programa akats batekin amaituko da:
 
-``python '
+```python
 
 izenak = ["Ada", "Neko", "Bug"]
 print (izenak [4]) #ERROREA!
 
-``i
+```
 
 Aurrerago itzuliko gara zerrendetara eta beste egitura batzuetara.
 
 
 
-# #None
+## None
 
 Arraroa dirudien arren, programetan batzuetan hutsa, ezereza irudikatzen duen zerbaitekin hitz egin behar izaten da.
 
@@ -690,25 +690,25 @@ Badago hitz bat Python-en ezereza irudikatzeko aukera ematen diguna, eta hori da
 
 
 
-``python '
+```python
 
 Hasierako balioa = None
 
 dato = None
 
-``i
+```
 
 Egia esan, ez da aldagaiak sortzeko erabiltzen. `Nonoporek balio bat adierazten du egoera berezietan. Adibidez, informazioa fitxategi bat edo erabiltzaileak ematen ez digun datu bat ez dagoen leku batetik atera nahi badugu.
 
 
 
-0.2 ekitaldia
+0.2 ariketa
 
 Idatzi hemen ikusitako mota bakoitzaren aldagai bat definituko duen programa bat, eta kontsola bidez erakutsiko ditu.
 
 
 
-``python '
+```python
 
 izena = "Ada"
 
@@ -736,7 +736,7 @@ print (aberastasunak)
 
 print (lagunak)
 
-``i
+```
 
 
 
@@ -744,7 +744,7 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Ada
 
@@ -758,7 +758,7 @@ null
 
 ["Ada", "Ruby", "Miranda"]
 
-``i
+```
 
 
 #Datuak irakurtzen
@@ -775,13 +775,13 @@ Erabiltzaileari datu bat eskatu eta aldagai batean gordetzeko, honako funtzio ha
 
 
 
-``python '
+```python
 
 izena = input ("Esadazu zure izena:")
 
 print ("Kaixo", izena)
 
-``i
+```
 
 
 
@@ -793,7 +793,7 @@ Pantailan honako hau ikusiko zenuke:
 
 Esadazu zure izena:
 
-``i
+```
 
 Input funtzioaren ondorioz, pantailan agertzen da "Zure izena adierazi:" mezua. Era berean, programa gelditu egiten da, erabiltzaileak zerbait idatzi arte.
 
@@ -807,18 +807,18 @@ Esadazu zure izena: Rosa
 
 Kaixo, Rosa.
 
-``i
+```
 
 
 
-0.3 ekitaldia
+0.3 ariketa
 Idatzi erabiltzaileari izen bat eskatu eta aldagai batean gordeko duen programa bat. Jarraian, kontsola bidezko agurra egin behar duzu.
 
 
 
 
 
-``python '
+```python
 
 izena = input ("Sartu zure izena:")
 
@@ -830,7 +830,7 @@ print ("Kaixo, zer moduz zaude", izena)
 
 #print ("Kaixo, zer moduz zaude % s" % izena)
 
-``i
+```
 
 
 
@@ -838,23 +838,23 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zure izena: Juan
 
 Kaixo, zer moduz zaude Juan?
 
-``i
+```
 
 
 
-# #Kontuz datuekin
+## Kontuz datuekin
 
 Erabiltzaileak zerbait idazteko,*** delako funtzioa erabiltzen duzun bakoitzean,*** testu gisa gordeko da. Nahiz eta zenbaki bat idatzi:
 
 
 
-``python '
+```python
 
 balioa = input ("Eman zenbaki bat:")
 
@@ -862,7 +862,7 @@ bikoitza = balioa + balioa
 
 print (bikoitza)
 
-``i
+```
 
 
 
@@ -870,13 +870,13 @@ Erabiltzaileak "4" bezalako zenbaki bat sartuz gero, emaitza hau izango litzatek
 
 
 
-```kontsolamendu
+```console
 
 Emadazu zenbaki bat: 4
 
 44
 
-``i
+```
 
 `4 + 4 'gehitu eta `8 "erakutsi beharrean, `4' eta `4 'batu egin ditu, izan ere," 4 "testua irakurri duenean," 4 "testua da.
 
@@ -886,14 +886,14 @@ Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihu
 
 
 
-``python '
+```python
 balioa = input ("Eman zenbaki bat:")
 
 bikoitza = int (balioa) + int (balioa)
 
 print (bikoitza)
 
-``i
+```
 
 
 
@@ -901,7 +901,7 @@ Edo lehenago ere bihur dezakegu:
 
 
 
-``python '
+```python
 
 balioa = input ("Eman zenbaki bat:")
 
@@ -911,7 +911,7 @@ bikoitza = balioa + balioa
 
 print (bikoitza)
 
-``i
+```
 
 
 
@@ -919,7 +919,7 @@ Edo, are gehiago, inputatu egin behar da:
 
 
 
-``python '
+```python
 
 balioa = int (input ("Emadazu zenbaki bat:")
 
@@ -927,29 +927,29 @@ bikoitza = balioa + balioa
 
 print (bikoitza)
 
-``i
+```
 
 
 
 Orain bai:
 
-```kontsolamendu
+```console
 
 Emadazu zenbaki bat: 4
 
 8
 
-``i
+```
 
 
 
-0.4 ekitaldia
+0.4 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat eta gehitu 10. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Gogoratu sartutako balioa zenbaki oso bihurtzeko sartzea komeni dela.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -959,23 +959,23 @@ emaitza = int (balioa) + 10
 
 print ("Batura hau da:", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 32
 
 Batura hau da: 42
 
-``i
+```
 
 
 
-# #Beste bihurketa batzuk
+## Beste bihurketa batzuk
 
 Hizkuntzan aldagai motak adierazi behar ez baditugu ere, motak (testua, zenbakia, etab.) kontuan hartzen dira programa gauzatzerakoan.
 
@@ -984,33 +984,33 @@ Adibidez, zenbaki bat duen aldagai bat badugu eta testu batean kateatu nahi badu
 
 
 
-``python '
+```python
 
 balioa = 66
 
 testua = "Nire adina da" + balioa
 
-``i
+```
 
 Errorea hau izango litzateke:
 
-```kontsolamendu
+```console
 
 TypeError: cannot concatenate 'str' and 'int' objects
 
-``i
+```
 
 Hori saihesteko, testu-mota behartu behar dugu `str ()» erabiliz:
 
 
 
-``python '
+```python
 
 balioa = 66
 
 testua = "Nire adina da" + str (balioa)
 
-``i
+```
 
 Beraz, batzuetan balio bat mota jakin batean bihurtu beharko dugu. Hauek dira bihurtzeko funtzioak:
 
@@ -1033,19 +1033,19 @@ Programek zenbakiekin kalkuluak egin behar dituzte, datuak prozesatu, balioen ar
 
 
 
-# #Eragile aritmetikoak
+## Eragile aritmetikoak
 
 Batuketak, kenketak eta oinarrizko kalkulu guztiak balioekin eta aldagaietan gordetzen denarekin egiteko aukera emango dizuten guztiak dira; adibidez, batuketa:
 
 
 
-``python '
+```python
 
 txikleak = 4
 
 txikleak = txikleak + 2
 
-``i
+```
 
 Programaren kalkuluen arabera, 4 txikle edukitzetik 6 izatera igaro zara.
 
@@ -1063,7 +1063,7 @@ Hauek dira programazioko oinarrizko eragiketak:
 
 Adibidez, egun batek zenbat segundo dituen kalkulatzeko:
 
-``python '
+```python
 
 minutuak = 60
 
@@ -1075,7 +1075,7 @@ orduak = 24
 
 Segundoak = segundoak* minutuak* orduak
 
-``i
+```
 
 
 
@@ -1083,7 +1083,7 @@ Behar bezain eragiketa konplexuak egin ditzakezu. Irakurtzeko errazagoak izan da
 
 
 
-``python '
+```python
 
 ada = 14
 
@@ -1093,16 +1093,16 @@ neko = 2
 
 batez bestekoa = (ada + bug + neko)/3
 
-``i
+```
 
 
 
-0.5 ekitaldia
+0.5 ariketa
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1112,35 +1112,35 @@ emaitza = int (balioa) - 5
 
 print ("Kenketa da:", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 30
 
 Kenketa hau da: 25
 
-``i
+```
 
 
 
-# # # #Modulua eta esponentziala
+##  ## Modulua eta esponentziala
 
 Programazioan oso garrantzitsua den eragiketa bat dago, agian mateetan hain ohikoa ez dena:** modulua da**. Zatiketaren emaitzaren ordez hondakina itzultzen duen zatiketa da:
 
 
 
-``python '
+```python
 
 balioa = 8
 
 emaitza = balioa % 3
 
-``i
+```
 
 Emaitza-balioa hauxe izango da:
 
@@ -1150,13 +1150,13 @@ Esponentziala zenbaki bat bere kabuz hainbat aldiz biderkatzearen emaitza da. Py
 
 
 
-``python '
+```python
 
 balioa = 2
 
 emaitza = balioa** 3 #honen baliokidea da: 2* 2* 2
 
-``i
+```
 
 
 
@@ -1164,20 +1164,20 @@ Emaitza `8 "izango litzateke.
 
 
 
-# # #Zeinu-aldaketa
+##  #Zeinu-aldaketa
 
 Ondo dakizunez, zenbaki batzuk zero baino txikiagoak dira, eta negatibo esaten zaie. Zenbaki horiek aurretik `-u 'batekin adierazten dira:
 
-``python '
+```python
 - 5, -248, -1.87,...
 
-``i
+```
 
 Zenbaki baten zeinua aldatu nahi badugu, aurretik `-u 'bat jar dezakegu:
 
 
 
-``python '
+```python
 
 tenperatura = -11
 
@@ -1189,35 +1189,35 @@ tenperatura = -tenperatura # 11
 
 kontua = -kontua # -200
 
-``i
+```
 
 
 
-# # #Operadore laburtuak
+##  #Operadore laburtuak
 
 Askotan, aldagai baten gainean jardun beharko duzu, eta emaitza aldagaian bertan gorde:
 
 
 
-``python '
+```python
 
 kontagailua = 0
 
 kontagailua = kontagailua + 2
 
-``i
+```
 
 Horrelako egoeretan, operadore** laburtu* bat erabil dezakezu, eragiketa egin eta aldi berean esleitzen duena. Hori aurreko kodearen baliokidea izango litzateke:
 
 
 
-``python '
+```python
 
 kontagailua = 0
 
 kontagailua + = 2
 
-``i
+```
 
 Gauza bera egin daiteke operadore guztiekin:
 
@@ -1241,12 +1241,12 @@ Gauza bera egin daiteke operadore guztiekin:
 
 
 
-0.6 ekitaldia
+0.6 ariketa
 Idatzi erabiltzaileari zenbaki bat eskatu eta handitu egingo duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Ondoren, balioa murriztu behar du eta emaitza kontsola bidez erakutsi. Operadore laburtuak erabili!
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1264,7 +1264,7 @@ balioa - = 1
 
 print ("Beherakada da", balioa)
 
-``i
+```
 
 
 
@@ -1272,7 +1272,7 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 6
 
@@ -1280,11 +1280,11 @@ Gehikuntza 7 da
 
 Beherakada 6 da
 
-``i
+```
 
 
 
-# #Konparazio-operadoreak
+## Konparazio-operadoreak
 
 Balio bat bestearekin alderatzeko aukera ematen diguten operadoreak dira. Normalean zenbakiekin erabiltzen da, eta eragiketa horien emaitza `True`edo `False«da.
 
@@ -1294,13 +1294,13 @@ Adibidez, balio bat beste baten berdina den egiaztatzeko, operadorea erabiliko d
 
 
 
-``python '
+```python
 
 balioa = 5
 
 emaitza = balioa = = 5
 
-``i
+```
 
 
 
@@ -1329,13 +1329,13 @@ Testudun operadore hau ere erabil daiteke berdintasuna egiaztatzeko:
 
 
 
-``python '
+```python
 
 izena = "Ada"
 
 Emaitza = izena = = "Bug"
 
-``i
+```
 
 Emaitza hau izango litzateke: `False«.
 
@@ -1343,13 +1343,13 @@ Era berean, testu bat ordena alfabetikoan handiagoa edo txikiagoa den alderatzek
 
 
 
-``python '
+```python
 
 izena = "Ada"
 
 emaitza = "Ada" < "Bug"
 
-``i
+```
 
 
 
@@ -1357,13 +1357,13 @@ Emaitza hauxe izango litzateke: `Trueu.
 
 
 
-0.7 ekitaldia
+0.7 ariketa
 
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Gero, bere desberdintasuna alderatu behar du eta emaitza kontsolaren bidez erakutsi behar du.
 
 
 
-``python '
+```python
 
 valor1 = input ("Sartu zenbaki bat:")
 
@@ -1377,13 +1377,13 @@ emaitza = 1 balorazioa! = 2
 
 print ("Desberdinak dira?", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 42
 
@@ -1391,28 +1391,28 @@ Sartu beste zenbaki bat: 42
 
 Desberdinak dira? Falsea
 
-``i
+```
 
 
 
-# #Operadore boolearrak
+## Operadore boolearrak
 
 Operadore boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True`edo `Falseere.
 
 
 
-# # #and
+##  #and
 
 Operadore horrek `Trueu 'itzuliko du, baldin eta bi operadoreak ere `Trueu:
 
 
 
-``python '
+```python
 
 balioa = 5
 emaitza = (balioa = = 5) and True;
 
-``i
+```
 
 
 
@@ -1436,13 +1436,13 @@ Aukera guztiak laburbiltzeko, horri esaten zaio operadorearen egiaren taula.
 
 
 
-0.8 ekitaldia
+0.8 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1454,35 +1454,35 @@ emaitza = (balioa > = 0) and (balioa % 2 = = 0)
 
 print ("Parea eta positiboa al da?", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 14
 
 Parea eta positiboa da? True
 
-``i
+```
 
 
 
-# # #or
+##  #or
 
 Operadore horrek honako hauek ere itzultzen ditu: `Trueu, baldin eta** edozein**, eta hauek ere bai:
 
 
 
-``python '
+```python
 
 balioa = 5
 
 emaitza = (balioa = = 5) or True;
 
-``i
+```
 
 
 
@@ -1505,13 +1505,13 @@ Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula
 
 
 
-0.9 ekitaldia
+0.9 ariketa
 
 Idatzi programa bat erabiltzaileari bi zenbaki eskatzeko eta bietako bat positiboa den egiaztatzeko. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 
 
-``python '
+```python
 
 valor1 = input ("Sartu zenbaki bat:")
 
@@ -1525,13 +1525,13 @@ emaitza = (int (valor1) > = 0) or (int (valor2) > = 0)
 
 print ("Bietako bat positiboa al da?", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: -4
 
@@ -1539,23 +1539,23 @@ Sartu beste zenbaki bat: 6
 
 Bietako bat positiboa da? True
 
-``i
+```
 
 
 
-# # #not
+##  #not
 
 Operadore horrek kontrako balioa itzultzen du eragiketan. Aplikatzen bazaio, itzuli `Frueere 'ri, eta aplikatzen bazaio, itzuli `Falseere' ri:
 
 
 
-``python '
+```python
 
 balioa = True
 
 emaitza = not balioa;
 
-``i
+```
 
 
 
@@ -1574,13 +1574,13 @@ Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula
 
 
 
-0.10 ekitaldia
+0.10 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, eta egiaztatu ez dela ez positiboa ez bikoitia.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1594,29 +1594,29 @@ emaitza = not positiboaYPar
 
 print ("Ez al da parea eta positiboa?", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: -4
 
 Ez al da bikoitia eta positiboa? True
 
-``i
+```
 
 
 
-# # #Operadoreak konbinatzen
+##  #Operadoreak konbinatzen
 
 Operadoreak behar adina konbina ditzakegu:
 
 
 
-``python '
+```python
 
 erretiratua = 65
 
@@ -1624,7 +1624,7 @@ if adina > 17 and adina < (erretiratua + 1):
 
 print ("Lan egin dezakezu")
 
-``i
+```
 
 
 
@@ -1632,16 +1632,16 @@ Oro har, baldintzapeko eragileak baldintzapeko blokeen, begizten eta abarren bal
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-0.0 ekitaldia
+0.0 ariketa
 Idatzi erabiltzaileari zenbaki bat eskatu eta 7 biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1651,7 +1651,7 @@ emaitza = int (balioa)* 7
 
 print ("Biderketa da:", emaitza)
 
-``i
+```
 
 
 
@@ -1659,23 +1659,23 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 3
 
 Biderketa hau da: 21
 
-``i
+```
 
 
 
-0.1 ekitaldia
+0.1 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta bitan banatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1685,29 +1685,29 @@ emaitza = int (balioa)/2
 
 print ("Zatiketa da:", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 60
 
 Banaketa hau da: 30
 
-``i
+```
 
 
 
-0.2 ekitaldia
+0.2 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 3. modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1717,7 +1717,7 @@ emaitza = int (balioa) % 3
 
 print ("Modulua da:", emaitza)
 
-``i
+```
 
 
 
@@ -1725,22 +1725,22 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 7
 
 Modulua hau da: 1
 
-``i
+```
 
 
-0.3 ekitaldia
+0.3 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 2ko esponentziala aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1752,29 +1752,29 @@ print ("Esponentziala da:", emaitza)
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 4
 
 Esponentziala hau da: 16
 
-``i
+```
 
 
 
-0.4 ekitaldia
+0.4 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, zeinua aldatu behar diozu eta emaitza kontsolarekin erakutsi.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1786,29 +1786,29 @@ emaitza = -resta
 
 print ("Azken kenketa da:", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 4
 
 Hau da azken kenketa: 1
 
-``i
+```
 
 
 
-0.5 ekitaldia
+0.5 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, % 2 eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta kenketa 0 bada, zenbaki hori bikoitia dela esan nahi du.
 
 
 
-``python '
+```python
 balioa = input ("Sartu zenbaki bat:")
 
 modulua = int (balioa) % 2
@@ -1821,29 +1821,29 @@ emaitza = modulua = = 0
 
 print ("Balioa parea da?", emaitza)
 
-``i
+```
 
 Emaitza
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 8
 
 Kemena bikoitia da? True
 
-``i
+```
 
 
 
-0.6 ekitaldia
+0.6 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 edo handiagoa den egiaztatu behar duzu, hau da, positiboa den.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1855,29 +1855,29 @@ emaitza = int (balioa) > = 0
 
 print ("Positiboa al da?", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 6
 
 Positiboa da? True
 
-``i
+```
 
 
 
-0.7 ekitaldia
+0.7 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -1889,16 +1889,16 @@ emaitza = int (balioa) < 0
 
 print ("Negatiboa al da?", emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: -3
 
 Negatiboa da? True
 
-``i
+```
