--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -12,25 +12,25 @@ Jarraian, begizta mota desberdinak ikusiko ditugu.
 
 
 
-# #Bucle while
+## Bucle while
 
 Baldintza bat betetzen den bitartean, "whilee" begizta exekutatu egiten da. Egitura oso sinplea du:
 
 
 
-``python '
+```python
 
 while* baldintza*:
 
 * jarraibideak*
 
-``i
+```
 
 Adibidez, begizta bat exekutatuko dugu aldagai baten balioa 0 baino handiagoa den bitartean.
 
 
 
-``python '
+```python
 
 kontagailua = 4
 while kontagailua > 0:
@@ -39,13 +39,13 @@ print ("Begiztaren barruan nago")
 
 kontagailua = kontagailua - 1
 
-``i
+```
 
 Pantailako emaitza hau izango litzateke:
 
 
 
-```kontsolamendu
+```console
 
 Begiztaren barruan nago
 
@@ -55,7 +55,7 @@ Begiztaren barruan nago
 
 Begiztaren barruan nago
 
-``i
+```
 
 
 
@@ -63,13 +63,13 @@ Oharra: Kontuz! Konturatu al zara begiztaren barruan kontagailuari balio bat ken
 
 
 
-2.0 ekitaldia
+2.0 ariketa
 
 Sortu 0an hasitako kontagailu-aldagai bat definituko duen programa bat. Ondoren, idatzi while begizta bat. Kontagailua 5 baino txikiagoa den bitartean, erakutsi mezu hau: `Estoy en el bucle«eta gehitu» kontagailu 1.
 
 
 
-``python '
+```python
 
 kontagailua = 0
 
@@ -79,7 +79,7 @@ print ("Begiztaren barruan nago")
 
 kontagailua = kontagailua + 1
 
-``i
+```
 
 
 
@@ -87,7 +87,7 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Begiztaren barruan nago
 
@@ -99,14 +99,14 @@ Begiztaren barruan nago
 
 Begiztaren barruan nago
 
-``i
+```
 
 
 Ikus dezagun beste adibide bat. Hurrengo programak datu bat eskatzen dio erabiltzaileari begizta batean. Programa ez da begiztatik aterako erabiltzaileak hutsuneari buruzko beste datu bat sartzen ez duen bitartean:
 
 
 
-``python '
+```python
 
 izena = "
 
@@ -118,17 +118,17 @@ izena = input ("Nola duzu izena?")
 
 print ("Kaixo", izena)
 
-``i
+```
 
 
 
-2.1 ekitaldia
+2.1 ariketa
 
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Lehenak bigarrena baino txikiagoa izan behar du. Begiztak bi zenbaki horien arteko tartean dauden zenbakiak erakutsi behar ditu.
 
 
 
-``python '
+```python
 
 min = input ("Sartu gutxieneko bat:")
 
@@ -148,13 +148,13 @@ print (min)
 
 min = min + 1
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu gutxieneko bat: 3
 
@@ -170,23 +170,23 @@ Sartu gehienez: 8
 
 7
 
-``i
+```
 
 
 
-# #Begizta For
+## Begizta For
 
 Begizta for ekintza bat errepikatzeko erabiltzen dugu. Baldintza bat baino gehiago, kontagailu moduko bat erabiltzen du:
 
 
 
-``python '
+```python
 
 for* aldakorra* in* tartea*:
 
 * jarraibideak*
 
-``i
+```
 
 
 Adibidez, honako begizta honek "hola" mezua 4 aldiz erakutsiko du:
@@ -199,7 +199,7 @@ for i in range (4):
 
 print ("Kaixo")
 
-``i
+```
 
 Hona hemen emaitza:
 
@@ -213,7 +213,7 @@ Kaixo
 
 Kaixo
 
-``i
+```
 
 
 
@@ -227,7 +227,7 @@ for i in range (4):
 
 print ("Kaixo", i)
 
-``i
+```
 
 
 
@@ -245,19 +245,19 @@ Kaixo 2
 
 Kaixo 3
 
-``i
+```
 
 Hori baliagarria izan dakiguke programa askotan.
 
 
 
-2.2 ekitaldia
+2.2 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, 0tik 10era biderkatzeko taula erakusten duena.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -273,13 +273,13 @@ print (balioa, "x", i, "=", (balioa* i))
 
 #print (" % d x % d = % d" % (balioa, i, balioa* i))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 3
 
@@ -291,16 +291,16 @@ Sartu zenbaki bat: 3
 
 ...
 
-``i
+```
 
 
 
-2.3 ekitaldia
+2.3 ariketa
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. 0 edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, "Python mola!" mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
 
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -318,13 +318,13 @@ for i in range (0, zenbakia):
 
 print ("Python mola!")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 3
 
@@ -334,11 +334,11 @@ Python mola!
 
 Python mola!
 
-``i
+```
 
 
 
-# # #Tartea aldatu
+##  #Tartea aldatu
 
 Lehenetsita, "range (4)" 0tik 3ra bitarteko zerrenda itzultzen ari da, hau da: 0, 1, 2, 3. Lau elementu dira guztira eta, beraz, begiztak lau buelta emango ditu.
 
@@ -362,7 +362,7 @@ for i in range (5, 9):
 
 print ("Kaixo", i)
 
-``i
+```
 
 Hona hemen emaitza:
 
@@ -375,17 +375,17 @@ Kaixo 7
 
 Kaixo 8
 
-``i
+```
 
 
 
 Hirugarren parametro bat ere adieraz daiteke, balio batetik bestera nola salto egiten den adierazteko. Adibidez, 2tik 2ra:
 
-``python '
+```python
 
 range (1, 11, 2) # 1, 3, 5, 7, 9
 
-``i
+```
 
 
 
@@ -397,7 +397,7 @@ for i in range (0, 6, 2):
 
 print ("Kaixo", i)
 
-``i
+```
 
 Hona hemen emaitza:
 
@@ -409,11 +409,11 @@ Kaixo 2
 
 Kaixo 4
 
-``i
+```
 
 
 
-# # #Atzerantz
+##  #Atzerantz
 
 Begizta atzerantz ere ibil daiteke, jauzi negatiboa eginez:
 
@@ -427,7 +427,7 @@ for i in range (5, 0, -1):
 
 print (i)
 
-``i
+```
 
 
 
@@ -447,17 +447,17 @@ Hona hemen emaitza:
 
 1
 
-``i
+```
 
 
 
-2.4 ekitaldia
+2.4 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, 0tik erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu. Erabili `formako 'begizta eta egin salto binaka.
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -469,13 +469,13 @@ for i in range (0, balioa, 2):
 
 print (i)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 5
 
@@ -485,16 +485,16 @@ Sartu zenbaki bat: 5
 
 4
 
-``i
+```
 
 
 
-# # #Zerrenden gaineko begiztak
+##  #Zerrenden gaineko begiztak
 Begizta `indartsuak 'bereziki erabilgarriak dira zerrenda bateko elementu guztiak aztertu nahi ditugunean, erakusteko, prozesatzeko edo dena delakoa. Forma oso erraza da:
 
 
 
-``python '
+```python
 
 objektuak = ["izarra", "perretxikoa", "lorea"]
 
@@ -502,13 +502,13 @@ for objektua in objektuak:
 
 print (objektuak)
 
-``i
+```
 
 Begiztaren buelta bakoitzean, "objektu" aldagaiak balio bat hartuko du "objektu" zerrendatik, eta, beraz, emaitza hau izango da:
 
 
 
-```kontsolamendu
+```console
 
 izarra
 
@@ -516,7 +516,7 @@ perretxikoa
 
 lorea
 
-``i
+```
 
 
 
@@ -526,7 +526,7 @@ Batzuetan, baliteke begizta batetik irten eta beste ezer prozesatzen ez jarraitz
 
 
 
-``python '
+```python
 
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
 
@@ -536,7 +536,7 @@ if izena = = "Ane":
 
 print ("Ane zerrendan dago")
 
-``i
+```
 Programa horren arazoa da, nahiz eta `Aneere 'aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
 
 
@@ -545,7 +545,7 @@ Zorionez, begiztetan break jarraibidea erabil dezakegu, begizta bat-batean bukat
 
 
 
-``python '
+```python
 
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
 
@@ -557,17 +557,17 @@ print ("Ane zerrendan dago")
 
 break
 
-``i
+```
 
 
 
-2.5 ekitaldia
+2.5 ariketa
 
 Idatzi 3 zenbakidun zerrenda bat zehazten duen programa bat. Ondoren, sortu begizta for bat, zerrenda gainditu eta zenbakiak adierazten duen beste aldiz errepikatuko duena.
 
 
 
-``python '
+```python
 
 errepikatzea = [3, 6, 2]
 
@@ -579,13 +579,13 @@ for i in range (batzuetan):
 
 print ("Python")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Python
 
@@ -597,7 +597,7 @@ Python
 
 ...
 
-``i
+```
 
 
 
@@ -616,17 +616,17 @@ Baldintzak oso zehatzak ez direnean erabil daiteke `whilee 'begizta. Adibidez, e
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-2.0 ekitaldia
+2.0 ariketa
 
 Idatzi programa bat "whilee" begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, "Ada") eta "Kaixo Ada" izen hori agurtzeko. "Irten" testua sartuz gero, buklea amaitu egin behar da.
 
 
 
-``python '
+```python
 
 izena = "
 
@@ -644,13 +644,13 @@ print ("Amaiera. ")
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 Sartu izen bat: Ada
 
 Kaixo Ada
@@ -663,17 +663,17 @@ Sartu izen bat: salir
 
 Amaiera.
 
-``i
+```
 
 
 
-2.1 ekitaldia
+2.1 ariketa
 
 Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen dion eta zenbakia 0 ez den bitartean amaitzen ez duen "whilee" begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen beste aldiz. Zenbakia 0 baino txikiagoa bada, begizta "break" batekin amaitu behar da;
 
 
 
-``python '
+```python
 
 balioa = "
 
@@ -695,13 +695,13 @@ for i in range (balioa):
 
 print ("Kaixo")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 3
 
@@ -713,22 +713,22 @@ Kaixo
 
 Sartu zenbaki bat: -1
 
-``i
+```
 
 
 
-2.2 ekitaldia
+2.2 ariketa
 
 Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu 0 baino handiagoa den eta, gainera, bikoitia den. Hala bada, bistaratu pantailan zenbakiaren balioa adina aldiz karaktere* Erabili `print ("*")
 
 Adibidez, 8 sartuz gero, hau erakutsiko du:
 
 
-```kontsolamendu
+```console
 
 *******
 
-``i
+```
 
 
 
@@ -736,7 +736,7 @@ Sartutako balioak baldintzak betetzen ez baditu, erabiltzaileari ohartarazteko m
 
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -762,21 +762,21 @@ numero = numero - 1
 
 print (izarrak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 6
 
 *****
 
-``i
+```
 
-2.3 ekitaldia
+2.3 ariketa
 
 Sortu aurrekoaren antzeko proiektu bat, pare positiboak bakarrik onartu behar dituena, baina erakutsi behar duzun ildoak alderdi hau izan behar du:
 
@@ -794,7 +794,7 @@ Adibidez, 4 zenbakia sartzen badute:
 
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -825,21 +825,21 @@ sekuentzia = sekuentzia + "*"
 
 print (sekuentzia)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 8
 
 - -* -* -* -*
 
-``i
+```
 
-2.4 ekitaldia
+2.4 ariketa
 
 Erabiltzaileari zenbaki oso bat eskatzen dion programa bat sortzen du, eta balio hori erabiliz, «marraztu» egin behar du kontsolan «*» lauki bat.
 
@@ -847,7 +847,7 @@ Adibidez, 4 sartuz gero, hau erakutsiko da:
 
 
 
-```kontsolamendu
+```console
 
 ****
 
@@ -857,11 +857,11 @@ Adibidez, 4 sartuz gero, hau erakutsiko da:
 
 ****
 
-``i
+```
 
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -891,13 +891,13 @@ izarrak = izarrak + "\n"
 
 print (izarrak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 2
 
@@ -905,15 +905,15 @@ Sartu zenbaki bat: 2
 
 **
 
-``i
+```
 
-2.5 ekitaldia
+2.5 ariketa
 
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, 5eko faktoria 5 x 4 x 3 x 2 x 1 = 120 izango litzateke.
 
 
 
-``python '
+```python
 numero = input ("Sartu zenbaki bat:")
 
 kopurua = int (zenbakia)
@@ -938,21 +938,21 @@ factorial = factorial* numero
 
 print ("Emaitza:", faktoria)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 4
 
 Emaitza: 24
 
-``i
+```
 
-2.6 ekitaldia
+2.6 ariketa
 
 
 
@@ -960,7 +960,7 @@ Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu z
 
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -1004,26 +1004,26 @@ LKse:
 
 print (jatorrizkoa, "EZ da lehengusua. ")
 
-``i
+```
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 5
 
 5 lehengusua da.
 
-``i
+```
 
-2.7 ekitaldia
+2.7 ariketa
 
 Sortu 0tik 10era biderkatzeko taula guztiak erakusten dituen programa bat.
 
 
 
-``python '
+```python
 
 for i in range (11):
 
@@ -1041,4 +1041,4 @@ for j in range (11):
 
 print (" % d x % d = % d" (i, j, i* j))
 
-``i
+```
