--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -4,13 +4,13 @@ Funtzioak programa txikiak dira programen barruan. Funtzio horrek pantailan agur
 
 
 
-``python '
+```python
 
 def agurra ():
 
 print "Kaixo"
 
-``i
+```
 
 Ikus daitekeenez, funtzio bat definitzeko, `def, 'hitza erabiltzen da, eta, ondoren, funtzioaren izena, kasu honetan, `osasuna' eta "()" parametroen zerrenda, kasu honetan hutsik dagoena.
 
@@ -26,29 +26,29 @@ Funtzio hori definitu ondoren, funtzio hori erabiltzen dugun bakoitzean, funtzio
 
 
 
-``python '
+```python
 
 agurra ()
 
-``i
+```
 
 Horrek erakutsiko du:
 
-```kontsolamendu
+```console
 
 Kaixo
 
-``i
+```
 
 
 
-4.0 ekitaldia
+4.0 ariketa
 
 Idatzi programa bat hiru emanaldirekin: egunak, arratsaldeak eta gauak. Bakoitzak agur desberdina egin behar du: "Egun on", "Arratsalde on" eta "Gabon", hurrenez hurren. Gehitu hiru funtzioetarako deiak.
 
 
 
-``python '
+```python
 def dias ():
 
 print ("Egun on")
@@ -73,13 +73,13 @@ arratsaldez ()
 
 gauak ()
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Egun on.
 
@@ -87,11 +87,11 @@ Arratsalde on.
 
 Gau on.
 
-``i
+```
 
 
 
-# #Parametroak
+## Parametroak
 
 Funtzioek parametroak jaso ditzakete. Horiek aldagai bihurtzen dira funtzioaren barruan, eta funtzioak gertatzen zaienaren arabera gauza desberdinak egitea ahalbidetzen digute.
 
@@ -101,13 +101,13 @@ Adibidez, norbait agurtzen duen funtzio bat sor dezakegu:
 
 
 
-``python '
+```python
 
 def saluda (pertsona):
 
 print ("Kaixo", pertsona)
 
-``i
+```
 
 Funtzioaren barruan, pertsonen balioa desberdina izango da deian ematen zaionaren arabera.
 
@@ -115,35 +115,35 @@ Honela erabil liteke:
 
 
 
-``python '
+```python
 
 agur ("Neko") #pertsona izango da "Neko"
 
 agur ("Ada") #pertsona izango da "Ada"
 
-``i
+```
 
 Hona hemen horren emaitza:
 
 
 
-``i
+```
 
 Kaixo Neko
 
 Kaixo Ada
 
-``i
+```
 
 
 
-4.1 ekitaldia
+4.1 ariketa
 
 Idatz ezazu programa bat "laukia" izeneko funtzio batekin, eta parametro hau izango du: Funtzioak emaitza biderkatu eta pantaila bakoitzean erakutsi behar du.
 
 
 
-``python '
+```python
 
 def cuadrado (a):
 print (a* a)
@@ -154,27 +154,27 @@ print (a* a)
 
 karratua (3)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 9
 
-``i
+```
 
 
 
-# # #Lehenetsitako balioa duen parametroa
+##  #Lehenetsitako balioa duen parametroa
 
 Funtzio baten parametroek lehenetsitako balioa izan dezakete. Hau da, balio jakin bat esleitu ahal zaie, eta deian parametro hori pasatzen ez bada, parametroak balio hori lehenetsiko du.
 
 
 
-``python '
+```python
 
 def agur (pertsona, batzuetan = 3):
 
@@ -182,27 +182,27 @@ for i in range (batzuetan):
 
 print ("Kaixo", pertsona)
 
-``i
+```
 
 Honela deitzen bazaio:
 
-``python '
+```python
 
 agurtu ("Neko", 2)
 
-``i
+```
 
 
 
 Ikusiko litzateke:
 
-``i
+```
 
 Kaixo Neko
 
 Kaixo Neko
 
-``i
+```
 
 
 
@@ -210,17 +210,17 @@ Aldiz, bigarren parametroa pasatzen ez badugu, `veces`ek lehenetsitako balioa ha
 
 
 
-``python '
+```python
 
 agurtu ("Bug")
 
-``i
+```
 
 
 
 Hau litzateke:
 
-```kontsolamendu
+```console
 
 Kaixo Bug
 
@@ -228,7 +228,7 @@ Kaixo Bug
 
 Kaixo Bug
 
-``i
+```
 
 
 
@@ -240,7 +240,7 @@ Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun**** parametro guztia
 
 
 
-``python '
+```python
 
 def batu (* balioak):
 
@@ -255,7 +255,7 @@ emaitza = emaitza + balioa
 
 erreturn emaitza
 
-``i
+```
 
 
 
@@ -265,23 +265,23 @@ Erreparatzen badiguzu, `baloreak 'parametroa zehaztu dugu, aurretik zenbaki bat 
 
 Beraz, funtzio horri honela dei diezaiokegu:
 
-``python '
+```python
 
 batu (3, 4, 5) # 12
 
 batu (2, 45) # 47
 
-``i
+```
 
 
 
-4.2 ekitaldia
+4.2 ariketa
 
 Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen batu izeneko funtzio batekin. Batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
 
 
 
-``python '
+```python
 
 def batu (* hitzak):
 
@@ -303,21 +303,21 @@ return esaldia
 
 print ("Kaixo", "Zer", "Halakoa")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Kaixo, zer moduz?
 
-``i
+```
 
 
 
-# #Itzulera
+## Itzulera
 
 Funtzioek beharrezkoak diren eragiketa guztiak egin ditzakete, baina emaitza bat itzultzen dutenean erabilgarriagoak dira.
 
@@ -330,7 +330,7 @@ Adibidez, bi balioren batura kalkulatzen duen funtzio bat:
 
 
 
-``python '
+```python
 
 def suma (a, b):
 
@@ -338,19 +338,19 @@ emaitza = a + b
 
 erreturn emaitza
 
-``i
+```
 
 Pixka bat laburtu daiteke zuzenean:
 
 
 
-``python '
+```python
 
 def suma (a, b):
 
 return a + b
 
-``i
+```
 
 
 
@@ -358,11 +358,11 @@ Honela erabil liteke funtzioa:
 
 
 
-``python '
+```python
 
 print (batura (40, 2)) # 42
 
-``i
+```
 
 
 
@@ -374,13 +374,13 @@ Gauza pare bat hartu behar dituzu kontuan, honako honekin:
 
 
 
-4.3 ekitaldia
+4.3 ariketa
 
 Idatzi programa bat "zatitu" izeneko funtzio batekin, eta jaso itzazu parametro hauek: "berdin dio eta". Funtzioak bi zenbakien arteko zatiketa itzuli behar du.
 
 
 
-``python '
+```python
 
 def zatitu (a, b):
 
@@ -392,24 +392,24 @@ return a/b
 
 print (zatitu (32, 4))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 8
 
-``i
+```
 
 
 Beste adibide bat, balio bat hainbat aldiz biderkatzen duen funtzio bat. Kopurua 1 baino txikiagoa bada, 0 bat itzuliko du:
 
 
 
-``python '
+```python
 
 def multiplika (kopurua, aldiz):
 
@@ -429,7 +429,7 @@ return 0
 
 biderkadura (2, 3) # 8
 
-``i
+```
 
 
 
@@ -437,7 +437,7 @@ Oharra: aurreko funtzioa argiago geratzen da horrela.
 
 
 
-``python '
+```python
 
 def multiplika (kopurua, aldiz):
 
@@ -451,11 +451,11 @@ for i in range (batzuetan):
 
 guztira = guztira* kopurua
 
-``i
+```
 
 
 
-# #Habia-deiak
+## Habia-deiak
 
 Ez izan funtzio-deiei habia egiteko beldurrik. Oso gauza naturala da programazioan.
 
@@ -463,7 +463,7 @@ Imajinatu erabiltzaileari zenbaki bat eskatzeaz arduratzen den funtzio hau dugul
 
 
 
-``python '
+```python
 
 def lee zenbakia ():
 
@@ -471,30 +471,30 @@ numero = input ("Idatzi zenbakia:")
 
 return int (zenbakia)
 
-``i
+```
 
 Demagun beste funtzio bat ere badugula zenbakiak kentzeko:
 
 
 
-``python '
+```python
 
 def restar (a, b)
 
 return a - b
 
-``i
+```
 
 
 Erabiltzaileari bi zenbaki eskatu eta kentzen dizkion programa bat egin nahi badugu, horrela egin genezake.
 
 
 
-``python '
+```python
 
 print (restar (leeNumero (), leeNumero ()))
 
-``i
+```
 
 Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu funtzio bati.
 
@@ -504,21 +504,21 @@ Funtzio horiek `irakurtzenZenbakia () ", balio batzuk itzuliko dituzte. Leheneng
 
 
 
-``python '
+```python
 
 print (kendu (5, irakurriZenbakia ()))
 
-``i
+```
 
 Eta gero, bigarrenari "IrakurriZenbakia ()" deitu ondoren:
 
 
 
-``python '
+```python
 
 print (kendu (5, 2)
 
-``i
+```
 
 
 
@@ -526,11 +526,11 @@ Gero, kenketa egingo da eta balio bat itzuliko du:
 
 
 
-``python '
+```python
 
 print (3)
 
-``i
+```
 
 
 
@@ -538,15 +538,15 @@ Eta, azkenik, a print deituko da eta emaitza ikusiko dugu:
 
 
 
-```kontsolamendu
+```console
 
 3
 
-``i
+```
 
 
 
-4.4 ekitaldia
+4.4 ariketa
 
 Idatzi bi funtzio. Zenbaki bat jaso eta zenbaki bera positiboan itzultzen duena.
 
@@ -575,7 +575,7 @@ Oharra: ez erabili aurretik zeuden funtzioak.
 
 
 
-``python '
+```python
 
 def positiboa (balioa):
 
@@ -605,13 +605,13 @@ print (potentzia (positiboa (2), positiboa (4)))
 
 potentzia (positiboa (-5), positiboa (4))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 1
 
@@ -619,7 +619,7 @@ Emaitza:
 
 16
 
-``i
+```
 
 Zergatik erabili funtzioak?
 
@@ -644,13 +644,13 @@ Jarduneko kodea idaztea programa konplexuagoak diseinatzeko lehen urratsa da.
 
 
 
-# # # 1. arrazoia: kodea ez errepikatzea
+##  # 1. arrazoia: kodea ez errepikatzea
 
 Zure programak zerbait egin behar badu hainbat aldiz, kodea behar beste aldiz errepikatu beharko zenuke. Imajinatu erabiltzailearen hainbat datu jaso behar dituzula, eta hori egiten duzun bakoitzean datua hutsik ez dagoela egiaztatu behar duzula:
 
 
 
-``python '
+```python
 
 dato = "
 
@@ -664,7 +664,7 @@ if dato = = "":
 
 print ("Datua hutsik dago!)
 
-``i
+```
 
 
 Erabiltzaileari 3 datu eskatzen badizkiozu, kode hori 3 aldiz errepikatu beharko zenuke! Aldiz, kode bera duen funtzio bat sortzen baduzu, behin bakarrik idatzi beharko duzu, eta gero behar adina aldiz erabili ahal izango duzu.
@@ -677,13 +677,13 @@ Oharra: kodea ez errepikatzea da programatzaile on orok jarraitu beharreko araur
 
 
 
-# # # 2. arrazoia: berrerabili kodea
+##  # 2. arrazoia: berrerabili kodea
 
 Kodea ez errepikatzeaz gain, funtzio batek aukera ematen digu kode berak hainbat datu-motatarako balio dezan. Horretarako erabiltzen dira parametroak!
 
 
 
-``python '
+```python
 
 def agurtu (agurra, batzuetan):
 
@@ -691,25 +691,25 @@ for i in range (batzuetan):
 
 print (agurra)
 
-``i
+```
 
 Balio desberdinekin dei dakioke:
 
 
 
-``python '
+```python
 
 agurtu ("Holi", 3)
 
 agurtu ("Aupa", 1)
 
-``i
+```
 
 Hau litzateke:
 
 
 
-```kontsolamendu
+```console
 
 Holi
 
@@ -719,11 +719,11 @@ Holi
 
 Aupa
 
-``i
+```
 
 
 
-# # 3. arrazoia: mantentze-lanak erraztea
+##  3. arrazoia: mantentze-lanak erraztea
 Kodea leku bakar batean badago, errazagoa da zuzentzea, aldatzea, hobetzea eta orokorrean mantentzea. Programa bat zerotik sortzea oso polita da, baina benetako lana kodea denboran zehar mantentzea da.
 
 Gure funtzioak ondo zehaztuak baditugu,* muuuuucho* lana aurreztuko dugu.
@@ -742,7 +742,7 @@ Berez, aditua zarenean, zure eginkizuna bera baino lehen testa idaztea da zurea!
 
 
 
-# #Nola egin funtzio onak
+## Nola egin funtzio onak
 
 Edonork idatz ditzake funtzioak eta kodea zati txikitan taldekatu. Baina pro gisa funtzioak idatzi nahi badituzu, honako hau lortu behar duzu:
 - Funtzio batek gauza bakarra egin behar du. Hobe da funtzio txiki asko izatea, gauza asko egiten dituzten funtzio gutxi izatea baino. Zure funtzioa pantailan sartzen ez bada edo 24 lerro gainditzen baditu, agian zati txikitan banatu beharko duzu.
@@ -753,17 +753,17 @@ Edonork idatz ditzake funtzioak eta kodea zati txikitan taldekatu. Baina pro gis
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-4.0 ekitaldia
+4.0 ariketa
 
 Idatzi bi zenbaki jasotzen dituen funtzio bat, detektatu zein den handiena eta erakutsi horien arteko aldea.
 
 
 
-``python '
+```python
 
 def diferentzia (1. balorazioa, 2. balorazioa):
 
@@ -789,28 +789,28 @@ aldea (10, 5)
 
 aldea (4, 12)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Aldea hau da: 5
 
 Aldea hau da: 8
 
-``i
+```
 
 
 
-4.1 ekitaldia
+4.1 ariketa
 Idatzi bi zenbaki eta eragiketa-zeinu aritmetiko bat jasotzen dituen programa bat: +, -,*, /. Funtzioak eragiketa horren emaitza itzuli behar du bi zenbakien artean.
 
 
 
-``python '
+```python
 
 def kalkula (1, 2, op):
 
@@ -842,13 +842,13 @@ emaitza = kalkulatu (4, 3, "@")
 
 print (emaitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 24
 
@@ -856,11 +856,11 @@ Emaitza:
 
 Eragiketa ezezaguna
 
-``i
+```
 
 
 
-4.2 ekitaldia
+4.2 ariketa
 
 `def saludo (momentoDelDia)
 
@@ -868,7 +868,7 @@ Funtzio honek parametro gisa eguneko une bat hartzen du: "goiz", "arratsalde" ed
 
 
 
-``python '
+```python
 
 def agurra (unea):
 
@@ -901,23 +901,23 @@ return {
 
 print (osasuna2 ("arratsaldez"))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Arratsalde on.
 
 Arratsalde on.
 
-``i
+```
 
 
 
-4.3 ekitaldia
+4.3 ariketa
 
 `hasiZenbakiarekin (zenbakiak, zenbakia )»
 
@@ -927,7 +927,7 @@ Funtzio honek array zenbakien elementu guztiak parametro gisa pasatzen dugun zen
 
 
 
-``python '
+```python
 
 defEkinZenbakiarekin (luzera, zenbakia):
 
@@ -949,30 +949,30 @@ print (hasiZenbakiarekin (10, 3))
 
 print (hasiConNumero1 (10, 3))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 [3, 3, 3, 3, 3, 3, 3, 3, 3, 3]
 
 [3, 3, 3, 3, 3, 3, 3, 3, 3, 3]
 
-``i
+```
 
 
 
-4.4 ekitaldia
+4.4 ariketa
 
 `def aleatorioa (gehienez)
 Funtzio horrek 0 eta parametro gisa pasatzen den gehieneko balioaren arteko ausazko zenbaki bat itzuli behar du.
 
 
 
-``python '
+```python
 
 import random
 
@@ -986,19 +986,19 @@ return random.randint (0, max)
 
 print (ausazkoa (5))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 3
 
-``i
+```
 
-4.5 ekitaldia
+4.5 ariketa
 
 Izena (silabak)
 
@@ -1008,7 +1008,7 @@ Silaba kopuru bat dela eta, ausazko izen bat sortzen duen funtzio bat (kontsonan
 
 
 
-``python '
+```python
 
 import random
 
@@ -1050,20 +1050,20 @@ return izena
 
 print (sortu izena (3))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 xamozu
 
-``i
+```
 
 
-4.6 ekitaldia
+4.6 ariketa
 
 `def crearPassword (length)
 
@@ -1073,7 +1073,7 @@ Luzera bat emanda, zorizko karaktereak dituen string bat sortzen duen funtzioa. 
 
 
 
-``python '
+```python
 
 import random
 
@@ -1113,21 +1113,21 @@ return password
 
 print (sortuPassword (8))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 _! 5_flg $
 
-``i
+```
 
 
 
-4.7 ekitaldia
+4.7 ariketa
 
 Sortu `faktura 'izeneko funtzioa (produktuak, kopuruak, prezioak), tamaina bereko hiru array jasotzen dituena, honako eduki hauekin:
 1. `produktuak: produktuen izenak.
@@ -1142,7 +1142,7 @@ Funtzioak produktu bakoitza zeharkatu eta guztizko prezioa kalkulatu behar du, k
 
 
 
-``python '
+```python
 
 def faktura (produktuak, kopuruak, prezioak):
 
@@ -1184,13 +1184,13 @@ Faktura, guztira = faktura (["Ogia", "Arrautzak", "Irina"], [1,6,2], [1.2, 0.2, 
 
 print (guztiraFaktura)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 FAKTURA
 
 - ------------------
@@ -1207,11 +1207,11 @@ Irina x 2: 0.8
 
 Guztira: 4.0
 
-``i
+```
 
 
 
-4.8 ekitaldia
+4.8 ariketa
 
 Hau zailagoa izango da. Jolasetako pertsonaiak sortzeko funtzio bat duen programa bat sortzen du.
 
@@ -1229,7 +1229,7 @@ Azkenean, programak esleitutako puntuen laburpena erakutsi behar du.
 
 
 
-``python '
+```python
 
 import random
 
@@ -1308,13 +1308,13 @@ Atributuak sortu (3)
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Konpentsazio bidez esleitutako balioak: 3
 
@@ -1324,4 +1324,4 @@ Indarra: 1
 
 Abiadura: 10
 
-``i
+```
