--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -18,7 +18,7 @@ Demagun Mario Kart bezalako lasterketa-joko baten programa egin behar dugula. Ob
 
 
 
-# #Nola sortu klaseak
+## Nola sortu klaseak
 
 
 
@@ -33,7 +33,7 @@ Adibidez, hurrengo klaseak katu oso sinple bat irudikatzen du, maullatzeko funtz
 
 
 
-``python '
+```python
 
 class Katua:
 
@@ -41,7 +41,7 @@ def maulla (self):
 
 print ("Miau")
 
-``i
+```
 
 Ikus daitekeenez, klasea definitzeko, `class 'hitza erabiliko dugu, eta, ondoren, klasearen izena, lehenengo letra maiuskulaz. Bloke horren barruan doan guztia ikasgelaren parte izango da.
 
@@ -51,40 +51,40 @@ Bestalde, kontuan izan behar duzu** guztiek** klase baten funtzioek parametro `s
 
 
 
-# #Klasea vs instantzia
+## Klasea vs instantzia
 
 Klasea katuaren definizioa besterik ez da. Baina gure programan katu bat sortzeko, instantzia bat sortu behar dugu. Honela egiten da:
 
 
 
-``python '
+```python
 
 gato = Katua ()
 
 gato.maulla ()
 
-``i
+```
 
 Pantailan honako hauek ikusiko ditugu:
 
 
 
-```kontsolamendu
+```console
 
 Miau
 
-``i
+```
 Instantzia objektu zehatz bat da. Klasea definizioa baino ez da: katu batek izena eta maulla ditu. Instantzia objektu zehatz bat da: Neko.
 
 
 
-5.0 ekitaldia
+5.0 ariketa
 
 Idatzi lo egiteko, jateko eta agurtzeko metodoak dituen Pertsona izeneko klase bat definituko duen programa bat. Metodo bakoitzaren barruan testuren bat atera behar duzu kontsola bidez. Sortu ikasgelako instantzia bat eta deitu metodo desberdinetara.
 
 
 
-``python '
+```python
 
 class Pertsona:
 
@@ -118,13 +118,13 @@ pertsona.jatea ()
 
 pertsona.agurtu ()
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 ZZZZZ...
 
@@ -132,11 +132,11 @@ ZZZZZ...
 
 Kaixo, zer moduz?
 
-``i
+```
 
 
 
-# #Eraikuntza-funtzioa
+## Eraikuntza-funtzioa
 
 Orain dela gutxi definitu dugun katu hori. Izen bat emango diogu. Gainera, funtzio berezi bat sortuko dugu, `__init___ 'izenekoa.
 
@@ -145,7 +145,7 @@ Orain dela gutxi definitu dugun katu hori. Izen bat emango diogu. Gainera, funtz
 
 
 
-``python '
+```python
 
 class Katua:
 
@@ -159,7 +159,7 @@ def maulla (self):
 
 print ("Miau, naiz", self.izena)
 
-``i
+```
 
 
 
@@ -167,7 +167,7 @@ Orain, katu klaseko objektuak sortzen ditugunean, izen bat emango diogu, eta hau
 
 
 
-``python '
+```python
 
 gato = Katua ("Pixi")
 
@@ -179,23 +179,23 @@ Beste katu bat = Katua ("Txeto")
 
 beste katea.maulla ()
 
-``i
+```
 
 Eta kasu honetan ikusiko dugu:
 
 
 
-```kontsolamendu
+```console
 
 Miau, Pixi naiz.
 
 Miau, Cheto naiz.
 
-``i
+```
 
 
 
-5.1 ekitaldia
+5.1 ariketa
 
 Idatzi programa bat Kaixo izeneko klase bat definitzeko. Klaseak funtzio eraikitzaile bat izan behar du, `osasuna 'izeneko propietate batekin. Jabetza hori "kaixo" hitzarekin hasiko da.
 
@@ -203,7 +203,7 @@ Horrez gain, `decirHola«izeneko metodo bat erantsiko duzu, eta, pantailan, osas
 
 
 
-``python '
+```python
 
 class Kaixo:
 
@@ -224,21 +224,21 @@ hola = Hola ()
 
 hola.decirHola ()
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Kaixo
 
-``i
+```
 
 
 
-# #Herentzia
+## Herentzia
 
 Herentzia kodea berrerabiltzeko klaseek duten mekanismo bat da. Demagun katakume bat ordezkatzen duen eskola bat egin nahi dugula. Katu klaseak egiten duen gauza bera egitea nahi dugu, baina, gainera, zurrunga egitea.
 
@@ -246,7 +246,7 @@ Txakurkume klaseak Katu klasetik heredatu ahal izango luke, honela:
 
 
 
-``python '
+```python
 
 class Cachorro (Katua):
 
@@ -254,13 +254,13 @@ def ronea (self):
 
 print ("Purrrr")
 
-``i
+```
 
 Orain honako hau egin dezakegu. Txakurkume objektu bat sortzea, Katu klasearen propietate berberekin. Automatikoki jarauntsiko ditu jabetza (izena) eta metodo hau:
 
 
 
-``python '
+```python
 
 katutxoa = Txakurkumea ("Lucifur")
 
@@ -268,21 +268,21 @@ gatito.ronronea ()
 
 gatito.maulla ()
 
-``i
+```
 
 Honela ikusiko litzateke:
 
 
 
-```kontsolamendu
+```console
 
 Purrrr
 
 Miau, Lucifur naiz.
 
-``i
+```
 
-# # #super ()
+##  #super ()
 
 Azpiklase bat edo klase bat beste baten alaba sortzen duzunean, heredatzen duzun ikasgelatik `super () "funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
 
@@ -291,7 +291,7 @@ Adibidez, aurreko kasuan, `Cachorroere 'azpimailatik berezko eraikitzaile bat ge
 
 
 
-``python '
+```python
 
 class Cachorro (Katua):
 
@@ -307,11 +307,11 @@ def ronea (self):
 
 print ("Purrrr")
 
-``i
+```
 
 
 
-5.2 ekitaldia
+5.2 ariketa
 
 Idatz ezazu `Comidaa 'klasea definituko duen programa bat, izendapenaren atributuarekin. Sor ezazu `Frutak 'izeneko azpiklase bat, `Comidak `izena eta bitaminak `jasotzen dituen eraikitzaile batekin, eta `infoagne' izeneko metodo bat, bere informazio guztia itzultzen duena.
 
@@ -319,7 +319,7 @@ Sortu instantzia bat `Frutaa 'klasea probatzeko.
 
 
 
-``python '
+```python
 
 class Janaria:
 
@@ -354,21 +354,21 @@ print (postre.info ()
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Kiwi ['A', 'C']
 
-``i
+```
 
 
 
-# #Kapsularatzea
+## Kapsularatzea
 
 
 
@@ -378,17 +378,17 @@ Horretarako, objektuetan nahikoa da horrelako zerbait jartzea:
 
 
 
-``python '
+```python
 
 objektua. IzenaJabetza
 
-``i
+```
 
 
 
 Katuak izena izeneko propietate bat du.
 
-``python '
+```python
 
 miGato = Katua ("Pixi")
 
@@ -398,7 +398,7 @@ miGato.nombre = "Pixel"
 
 miGato.maulla () #Miau, Pixel naiz
 
-``i
+```
 
 
 
@@ -409,7 +409,7 @@ Bestela esanda, programatzaileek "kutxa beltzak" diruditen klaseak sortzen saiat
 
 Izenaren jabetzaren balioa itzultzeko metodo bat, "getter" ere esaten zaiona:
 
-``python '
+```python
 
 @property
 
@@ -417,13 +417,13 @@ def izena ():
 
 return self._izena
 
-``i
+```
 
 
 
 Izenaren balioa aldatu ahal izateko metodo bat, "setter" ere esaten zaiona:
 
-``python '
+```python
 
 @nombre.setter
 
@@ -433,13 +433,13 @@ if izena! = "":
 
 self._izena = izena
 
-``i
+```
 
 
 
 Klasea honela geratuko litzateke:
 
-``python '
+```python
 
 class Katua:
 
@@ -471,14 +471,14 @@ def maulla (self):
 
 print ("Miau, naiz", self.izena)
 
-``i
+```
 
 Ikus ezazu propietatea `izena`dela orain. Jabetza hori "pribatua" dela adierazteko modu bat da, eta ez litzatekeela ikasgelatik kanpo eskuratu behar.
 
 
 Orain, "Izena" izeneko klasea erabiltzen dugunean, funtzio berri horien bidez egingo da.
 
-``python '
+```python
 
 miGato = Katua ("Pixi")
 
@@ -488,17 +488,17 @@ miGato.nombre = "Pixel" #deitu `def izena (izena) metodora:
 
 miGato.maulla () #Miau, Pixel naiz
 
-``i
+```
 
 
 
-5.3 ekitaldia
+5.3 ariketa
 
 Idatz ezazu `Vehiculoere 'klasea definituko duen programa bat, "matrikula" atributuarekin, get/set metodoekin eta "arrancar«" izeneko beste metodo batekin. Sortu "Zortzi" izeneko azpiklase bat, `Vehicullo 'klasea zabaltzeko, eta eraikitzaile batek `matrikulak, modeloak eta koloreak' jasoko ditu, eta informazio guztia itzultzeko funtzio bat izango du. Sortu instantzia bat "Zortzi" klasea probatzeko.
 
 
 
-``python '
+```python
 
 class Ibilgailua:
 
@@ -559,19 +559,19 @@ print (kotxe.info ())
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 0042ASI abiarazten
 
 0042ASI Opel Corsa Blanco
 
-``i
+```
 
 
 
@@ -584,7 +584,7 @@ Katu klasearen kasuan, ez dugu uzten izena zuzenean aldatzen. "Setter" funtzioar
 
 
 
-# #Beste mota batzuk dituzten klaseak
+## Beste mota batzuk dituzten klaseak
 
 Objektuetara bideratutako programazioarekin, klaseen bidez mundu errealeko gauzak irudikatzen saiatzen gara. Eta klase horiek bata bestearekin lotuta egon daitezke.
 
@@ -596,7 +596,7 @@ Klaseek, beraz, beste mota batzuetako propietateak edo beste klase batzuetako ze
 
 
 
-``python '
+```python
 
 class Ikaslea:
 
@@ -643,19 +643,19 @@ ikasgela.meteIkaslea (2. ikaslea)
 
 aula.pasaLista ()
 
-``i
+```
 
 Diseinuak behar bezain konplexuak izan daitezke behar duguna irudikatzeko.
 
 
 
-5.4 ekitaldia
+5.4 ariketa
 
 Idatz ezazu programa bat, `Piloto«atributua» eta «get/set» funtzioak dituena. Era berean, sor ezazu `Aeroplana» izeneko klase bat, eredu, pilotu eta kopilotu atributuarekin, get/set funtzioekin modelorako, eta beste metodo batekin, «volard» izenekoa. Sortu instantzia bat bi klaseak probatzeko.
 
 
 
-``python '
+```python
 
 class pilotua:
 
@@ -728,29 +728,29 @@ print (avioneta.volar ())
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Hegan AirBluff 727 Han Solo Murdockekin
 
-``i
+```
 
-# #Metodo estatikoak
+## Metodo estatikoak
 
 Normalean, klase bat erabili ahal izateko, haren instantzia bat sortzen dugu beti, aurreko adibidean egiten genuen bezala:
 
 
 
-``python '
+```python
 
 alumno1 = Ikaslea ("Gumball")
 
-``i
+```
 
 
 
@@ -762,7 +762,7 @@ Adibidez, izen bat emanda, formatu zuzena ematen dion eskola bat egin dezakegu, 
 
 
 
-``python '
+```python
 
 class Formatua:
 
@@ -775,7 +775,7 @@ return izena [0] .upper () + izena [1:] .lower ()
 
 print (Formato.formato ("gUmBaLl"))
 
-``i
+```
 
 
 
@@ -783,15 +783,15 @@ Emaitza:
 
 
 
-``i
+```
 
 Gumball
 
-``i
+```
 
 
 
-5.5 ekitaldia
+5.5 ariketa
 
 
 
@@ -799,7 +799,7 @@ Idatzi programa bat, `Numeroa 'izeneko klase bat definituko duena, eta funtzio e
 
 
 
-``python '
+```python
 
 import random
 
@@ -819,13 +819,13 @@ for i in range (5):
 
 print (Zenbakia.aleatorioa (10))
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 4
 
@@ -837,7 +837,7 @@ Emaitza:
 
 1
 
-``i
+```
 
 
 
@@ -847,18 +847,18 @@ Zergatik egin klase bat horrelako funtzio batekin eta ez zuzenean funtzio bateki
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-5.0 ekitaldia
+5.0 ariketa
 Idatzi `Instrumento 'izeneko klase bat definitzen duen programa bat. Eraikitzaileak parametro hauek izan behar ditu, hurrenez hurren: `izena 'eta `mota'. Gainera, `ukitu 'izeneko funtzio bat gehitu behar duzu, mezu bat eta beste dei bat aterako dituena, atributuen informazioa duen testu bat itzultzeko.
 
 Sortu gelako instantzia bat eta deitu bere funtzioetara.
 
 
 
-``python '
+```python
 
 class Instrumentua:
 
@@ -892,28 +892,28 @@ print (miGuitarra.info ())
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Gitarra jotzen
 
 Hari-gitarra
 
-``i
+```
 
 
 
-5.1 ekitaldia
+5.1 ariketa
 Idatz ezazu programa bat, `NombreFormateado" izeneko klase bat definituko duena, eta, bertan, etxegile bat agertuko da, eta `izena 'eta `abizena' izeneko funtzio bat ere izango du. Sortu zure ustez egokiak diren eginkizun osagarriak.
 
 
 
-``python '
+```python
 
 class IzenaFormateatua:
 
@@ -955,26 +955,26 @@ formateatzailea = Formateatua ("JUAN", "PÉREZ")
 
 print (formateatzailea.formatear ())
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Juan Pérez
-``i
+```
 
 
 
-5.2 ekitaldia
+5.2 ariketa
 
 Idatz ezazu programa bat `Sumador, 'izeneko klase bat definitzeko, eta bi zenbakirekin idatzi. Bientzako get eta set funtzioak barne hartzen ditu, eta balio negatiboa esleitzen saiatzen bazaizkie 0 esleitzea kontrolatu behar duzu. Gainera, bi zenbakien batura itzuliko duen "batuketa" funtzioa izango dute.
 
 
 
-``python '
+```python
 
 class Batugailua:
 
@@ -1049,29 +1049,29 @@ sumador.valor2 = 66
 
 print (batuketa)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 42
 
 666
 
-``i
+```
 
 
 
-5.3 ekitaldia
+5.3 ariketa
 
 Sortu programa bat `Monedaa 'izeneko klase batekin. Klaseak eraikitzaile huts bat izan behar du, eta funtzio bakar bat, `tirarin 'izenekoa. Horren emaitza "aurpegiaren" edo "gurutzearen" artean ausaz aukeratutako* string* bat izan behar da. Sortu ikasgelako instantzia bat probatzeko.
 
 
 
-``python '
+```python
 
 import random
 
@@ -1105,13 +1105,13 @@ for i in range (10):
 
 print (moneda.tirar ())
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 aurpegia
 
@@ -1125,9 +1125,9 @@ gurutzea
 
 ...
 
-``i
+```
 
-5.4 ekitaldia
+5.4 ariketa
 
 Sortu programa bat "N aurpegiko dado baten portaera simulatzeko" Datuak "izeneko klase batekin. Sortu ikasgelako instantzia bat probatzeko.
 - `def __init__ 'eraikitzailea (self, aldeak, admitiCero = False): `lapur' atributuarekin: aurpegi-kopurua gordetzen duen atributua eta `￮ zeroOnartu = Faltsutzea: emandakoak 0 balioa itzul dezakeen esaten digun atributua. Lehenetsita, balio du:
@@ -1142,7 +1142,7 @@ Sor itzazu 6 aurpegiko dado bat, 10 aurpegiko dado bat eta zeroak ahalbidetzen d
 
 
 
-``python '
+```python
 
 import random
 
@@ -1223,13 +1223,13 @@ print (dado.tirar ())
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 4
 
@@ -1243,9 +1243,9 @@ Emaitza:
 
 ...
 
-``i
+```
 
-5.5 ekitaldia
+5.5 ariketa
 
 Sortu bi motatako programa bat:
 
@@ -1260,7 +1260,7 @@ Gainera, gehitu bi jokalari eta talde bat sortzeko beharrezkoa den kodea, eta ho
 
 
 
-``python '
+```python
 
 class Jokalaria:
 
@@ -1333,21 +1333,21 @@ taldea.erakutsiJokalariak ()
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Maradona Aurrelaria 10
 
 Beckenbauer Defentsa 4
 
-``i
+```
 
-5.6 ekitaldia
+5.6 ariketa
 
 Sortu zenbait klase barne hartzen dituen programa bat.
 
@@ -1360,7 +1360,7 @@ Gainera, sakelakoa, ordenagailua eta laginak sortzeko behar den kodea gehitzen d
 
 
 
-``python '
+```python
 
 class Gailua:
 
@@ -1486,23 +1486,23 @@ print ("Ordenagailua:", ordenadorea. ToString ())
 
 print ("Telefonoa:", telefonoa.toString ())
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Dell 4553.4 Lentium 4 ordenagailua
 
 Chanmhung telefonoa 434.4 665745345
 
-``i
+```
 
 
 
-5.7 ekitaldia
+5.7 ariketa
 
 Txanogorritxo proiektua sortuko dugu, non protagonistak janari saski bat kudeatzen duen. Bazkaria mota askotakoa izango da. Hauek dira egin beharreko klaseak:
 
@@ -1523,7 +1523,7 @@ Gainera, erantsi behar den kodea instantzia hauek sortzeko: `Fruta, `Carameloa, 
 
 
 
-``python '
+```python
 
 class Janaria:
 
@@ -1713,14 +1713,14 @@ print ("Pisua guztira:", zesta.pisua guztira ())
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 
 
-``i
+```
