--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -10,13 +10,13 @@ Zure programak sarera konektatu behar badu, baina zure ordenagailua konektatuta 
 
 Ikus dezakezunez, egoera batzuetan programak ezin du kontrolik izan. Zorionez, badugu mekanismo bat aukera ematen diguna saio horietako bat gertatzen bada gure programak huts egin ez dezan eta besterik gabe amai dadin. Eta mekanismo hori salbuespenak dira.
 
-# #Salbuespenak Python-en
+## Salbuespenak Python-en
 
 Adibidez, demagun honako programa oso sinple bat dugula, erabiltzaileari zenbaki bat eskatu eta biderketa bat egiten duena:
 
 
 
-``python '
+```python
 balioa = input ("Sartu zenbaki bat:")
 
 balioa = int (balioa)
@@ -25,11 +25,11 @@ karratua = balioa* balioa
 
 print ("Karratua da:", karratua)
 
-``i
+```
 
 Erabiltzaileak behar ez duena sartzen badu, honako hau ikusiko dugu:
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: x
 
@@ -41,13 +41,13 @@ balioa = int (balioa)
 
 ValueError: invalid literal for int () with base 10: 'x'
 
-``i
+```
 
 Salbuespen baten bidez, programak huts egitea ekidin dezakegu, eta gutxienez erabiltzaileari errore-mezu bat erakutsi. Salbuespena hizkuntzaren egitura bat gehiago da, eta forma hau du:
 
 
 
-``python '
+```python
 
 try:
 
@@ -57,7 +57,7 @@ salbuespen:
 
 codigo_que_se_ejecuta_si_hay_error
 
-``i
+```
 
 
 
@@ -65,7 +65,7 @@ Ikus dezagun aurreko adibidea, salbuespen-blokearen barruan kode sentikorra babe
 
 
 
-``python '
+```python
 
 balioa = input ("Sartu zenbaki bat:")
 
@@ -83,18 +83,18 @@ salbuespen:
 
 print ("Errorea datua bihurtzean!")
 
-``i
+```
 Orain, datu oker bat sartuz gero, honako hau ikusiko dugu:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: x
 
 Errorea datua bihurtzean!
 
-``i
+```
 
 
 
@@ -114,14 +114,14 @@ Era guztietako fitxategiak daude: testua, multimedia (musika, bideoa) eta fitxat
 
 
 
-# #Fitxategien irakurketa
+## Fitxategien irakurketa
 
 Fitxategi bat irakurri ahal izateko, alde batetik fitxategi hori egon behar da, gero ireki eta irakurri ahal izango dugu.
 Kode honetan, programaren leku berean dagoen fitxategi bat irakurtzen da:
 
 
 
-``python '
+```python
 
 fitxategia = open ("texto.txt", "r")
 
@@ -131,7 +131,7 @@ print (edukia)
 
 fichero.close ()
 
-``i
+```
 
 Kontuan hartzekoak:
 
@@ -145,7 +145,7 @@ Testu-fitxategia horrelako zerbait izan liteke, eta programak hori bera erakutsi
 
 
 
-```kontsolamendu
+```console
 
 Hau testu bat da
 
@@ -155,14 +155,14 @@ Eta irakur daiteke
 
 oso erraz
 
-``i
+```
 
-# # #Lerroz lerro irakurtzen?
+##  #Lerroz lerro irakurtzen?
 
 Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu-aldagai batean gordeta. Baina batzuetan, baliteke online fitxategia irakurri nahi izatea. Horretarako, honako funtzio hau erabili behar dugu:
 
 
-``python '
+```python
 
 fitxategia = open ("texto.txt", "r")
 
@@ -176,11 +176,11 @@ print (linea)
 
 fichero.close ()
 
-``i
+```
 
 
 
-# #JSON fitxategiak
+## JSON fitxategiak
 
 Aurrekoa bezalako testu-fitxategi sinpleek informazioa izan dezakete, baina ez dira programa baterako oso datu erabilgarriak. Programa batek erraz manipulatu ditzakeen datuak irakurri edo gorde nahi baditugu, formatu jakin bat erabiltzea komeni da.
 
@@ -190,7 +190,7 @@ Hurrengo edukia JSON formatuan dago. Hainbat objektu dituen zerrenda da.
 
 Erreparatzen badiozu, JSON* motako objektuak Python-eko hiztegien berdinak dira!*
 
-``python '
+```python
 
 [
 
@@ -202,7 +202,7 @@ Erreparatzen badiozu, JSON* motako objektuak Python-eko hiztegien berdinak dira!
 
 ]
 
-``i
+```
 Formatu horren alde ona da gure Python programara erraz inporta daitekeela, betiere zuzena bada, noski.
 
 
@@ -211,7 +211,7 @@ Eduki hori irakurri eta datu horiek hiztegi zerrenda bihurtzeko, `json, 'liburu-
 
 Fitxategi horren edukia automatikoki kargatu ahal izango dugu aldagai batean. Hortik aurrera, eduki hori guztia zerrenda gisa erabili ahal izango dugu, non elementu bakoitza hiztegi bat den!:
 
-``python '
+```python
 
 import json
 
@@ -231,7 +231,7 @@ print (pertsonaia ["izena"])
 
 fichero.close ()
 
-``i
+```
 
 
 
@@ -239,7 +239,7 @@ Pantaila batetik, hau ikusiko dugu:
 
 
 
-```kontsolamendu
+```console
 
 Ada
 
@@ -247,9 +247,9 @@ Neko
 
 Bug
 
-``i
+```
 
-# #Fitxategien eskritura
+## Fitxategien eskritura
 
 Fitxategiak idazteko, prozesua antzekoa da, baina bi gauza egin behar ditugu:
 
@@ -263,7 +263,7 @@ Kode honekin, testu-lerro pare bat idatziko ditugu fitxategian:
 
 
 
-``python '
+```python
 
 fitxategia = open ("texto.txt", "w")
 fichero.write ("Lerro bat\n idazten dut")
@@ -272,7 +272,7 @@ fichero.write ("Beste lerro bat idazten dut\n")
 
 fichero.close ()
 
-``i
+```
 
 
 
@@ -282,13 +282,13 @@ Fitxategiaren edukia:
 
 
 
-```kontsolamendu
+```console
 
 Lerro bat idazten dut
 
 Beste lerro bat idazten dut
 
-``i
+```
 
 
 
@@ -296,7 +296,7 @@ Edukia gehituz idatzi nahi badugu, fitxategia "a" moduan ireki behar dugu:
 
 
 
-``python '
+```python
 
 fitxategia = open ("texto.txt", "a")
 
@@ -306,7 +306,7 @@ fichero.write ("Gehitu beste lerro bat\n")
 
 fichero.close ()
 
-``i
+```
 
 
 
@@ -314,7 +314,7 @@ Orain, fitxategiaren edukia hau izango litzateke:
 
 
 
-```kontsolamendu
+```console
 
 Lerro bat idazten dut
 
@@ -324,11 +324,11 @@ Gehitu lerro bat
 
 Gehitu beste lerro bat
 
-``i
+```
 
 
 
-# #Fitxategi batean idatzi json
+## Fitxategi batean idatzi json
 
 JSON formatuko fitxategi baten kasuan, kezkatzekoa da idazteko unean gure datuak testu bihurtzea.
 
@@ -341,7 +341,7 @@ Gero elementu bat gehituko diogu zerrenda horri. Fitxategia berriro irekiko dugu
 
 
 
-``python '
+```python
 
 import json
 
@@ -367,7 +367,7 @@ fichero.write (json.dumps (edukia))
 
 fichero.close ()
 
-``i
+```
 
 #Liburu-dendak
 
@@ -382,7 +382,7 @@ Kodea fitxategietan eta karpetetan antolatu ondoren, beste fitxategi batzuetan b
 
 Funtzio hau definituko dugu `mates.pymes 'izeneko fitxategi batean:
 
-``python '
+```python
 
 Batuketa (a, b):
 
@@ -400,7 +400,7 @@ def handitu (a):
 
 return a - 1
 
-``i
+```
 
 
 
@@ -408,7 +408,7 @@ Orain, fitxategi hori beste programa batean sar dezakegu, `axola dio 'aginduaren
 
 
 
-``python '
+```python
 
 import mates
 
@@ -424,9 +424,9 @@ emaitza = mates.batu (1. balorazioa, 2. balorazioa)
 
 print (emaitza) # 15
 
-``i
+```
 
-6.0 ekitaldia
+6.0 ariketa
 
 Aurreko ekitaldi batean, pasahitzen sorgailu bat egitea proposatu zen. Erabili kode bera, baina sinetsi fitxategi baten barruan. Sortu beste fitxategi bat kode hori inportatzeko eta erabiltzeko.
 
@@ -436,7 +436,7 @@ Generar.ete fitxategia:
 
 
 
-``python '
+```python
 
 import random
 
@@ -469,11 +469,11 @@ password = password + caracter
 
 return password
 
-``i
+```
 
 Eta 1 ETE fitxategian erabiltzen dugu:
 
-``python '
+```python
 
 inport sortu
 
@@ -485,17 +485,17 @@ password = generar.crearPassword (8)
 
 print (pasahitza)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 g3ep-ahx
 
-``i
+```
 
 
 
@@ -503,7 +503,7 @@ Klaseekin gauza bera egin daiteke. Demagun `LectorPantallaa 'izeneko klasea dugu
 
 
 
-``python '
+```python
 
 class IrakurgailuaPantaila:
 
@@ -521,7 +521,7 @@ testua = input (mezua)
 
 return testua
 
-``i
+```
 
 
 
@@ -529,7 +529,7 @@ Orain, klase hori beste fitxategi batean berrerabil dezakegu, gure fitxategiarek
 
 
 
-``python '
+```python
 
 inport lector_pantaila
 
@@ -544,7 +544,7 @@ valor1 = irakurlea.osoa ()
 
 print (mates.handitu (baloratu 1))
 
-``i
+```
 
 
 
@@ -552,17 +552,17 @@ Pantailan horrelako zerbait ikus daiteke:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 6
 
 7
 
-``i
+```
 
 
 
-6.1 ekitaldia
+6.1 ariketa
 
 Definitu `Menue izeneko klase bat, honako funtzio hauek dituena:
 
@@ -578,7 +578,7 @@ Gero klase hori 2.py fitxategian inportatu eta erabili.
 
 Fitxategia:
 
-``python '
+```python
 
 class Menu:
 
@@ -602,13 +602,13 @@ return numero > 0 and numero < = len (self._opciones)
 
 
 
-``i
+```
 
 
 
 `2 ETEa fitxategia:
 
-``python '
+```python
 
 import menu
 
@@ -627,7 +627,7 @@ LKse:
 
 print ("1. aukera ez dago")
 
-``i
+```
 
 
 
@@ -635,7 +635,7 @@ Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 1 Erakutsi
 
@@ -645,15 +645,15 @@ Emaitza:
 
 Oraingo 1. aukera
 
-``i
+```
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-6.0 ekitaldia
+6.0 ariketa
 
 Sortu `Ficheroere 'izeneko klase bat, honako funtzio hauekin:
 
@@ -669,7 +669,7 @@ Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
 Fitxategia:
 
-``python '
+```python
 
 class Fitxategia:
 
@@ -700,13 +700,13 @@ fitxategia = open (self._nombreFichero, "w+")
 fichero.write (edukia)
 fichero.close ()
 
-``i
+```
 
 
 
 Fitxategia: `6.0.ete:
 
-``python '
+```python
 
 from datetime import date
 
@@ -728,31 +728,31 @@ miFichero.escribir ("Edukia aldatuta!!!" + str (date.today ()))
 
 print ("Edukia:", miFichero.leer ())
 
-``i
+```
 
 Testu-fitxategia:
 
-```kontsolamendu
+```console
 
 Horixe da gaur egungo edukia.
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Aurreko edukia: Eduki aldatua!!! 2020-08-18
 
 Edukia: Edukia aldatuta!!! 2020-08-23
 
-``i
+```
 
 
 
-6.1 ekitaldia
+6.1 ariketa
 
 Sor ezazu "Zerrenda" izeneko klase bat, honako funtzio hauekin:
 
@@ -769,7 +769,7 @@ Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
 Zerrenda fitxategia:
 
-``python '
+```python
 
 import json
 
@@ -830,13 +830,13 @@ print (datua)
 
 
 
-``i
+```
 
 
 
 `6.1 ETEa fitxategia:
 
-``python '
+```python
 
 zerrenda import
 
@@ -862,7 +862,7 @@ print ("Badago!")
 
 print (miListado.posicion ('eugene'))
 
-``i
+```
 
 
 
@@ -898,13 +898,13 @@ print (miListado.posicion ('eugene'))
 
 ]
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 {'id': 3, 'nombre': 'juan'}
 
@@ -916,11 +916,11 @@ Badago!
 
 1
 
-``i
+```
 
 
 
-6.2 ekitaldia
+6.2 ariketa
 
 Sor ezazu `Tareas«izeneko klase bat, honako funtzio hauekin:
 
@@ -939,7 +939,7 @@ Gero, ikasgela erabili behar duzu beste fitxategi batean inportatuz.
 
 Fitxategia: `tareas.py«»
 
-``python '
+```python
 
 import json
 
@@ -995,7 +995,7 @@ erreturn emaitza
 
 
 
-``i
+```
 
 
 Fitxategia: `tareas.json«:
@@ -1010,13 +1010,13 @@ Fitxategia: `tareas.json«:
 
 "Zeregina": "Lo gehiago egin", "Id": 10}
 
-] ``i
+] ```
 
 
 
 Fitxategia:
 
-``python '
+```python
 
 Atazen inport
 
@@ -1046,13 +1046,13 @@ print (nireTareak.erakutsi (), "\n---")
 
 misTareas.gorde ()
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 {"Zeregina": "Go ikastea", "id": 3}
 
@@ -1097,11 +1097,11 @@ Emaitza:
 
 - --
 
-``i
+```
 
 
 
-6.3 ekitaldia
+6.3 ariketa
 
 Sor ezazu `Jugadora 'izeneko klase bat, eta eduki hau izango du:
 
@@ -1129,7 +1129,7 @@ Ikasgelan, `Jugadora 'klasea inportatu beharko duzu, erabili ahal izateko.
 
 `￮ jokalari.ete 'fitxategia:
 
-``python '
+```python
 class Jokalaria:
 
 def __init__ (self, izena, dortsala):
@@ -1176,13 +1176,13 @@ def toString (self):
 
 return f "{self._nombre} {self._dorsal}"
 
-``i
+```
 
 
 
 · ETEen taldea fitxategia:
 
-``python '
+```python
 
 import json
 
@@ -1221,13 +1221,13 @@ for jokalari in self._jugadores:
 
 print (jokalaria.toString ())
 
-``i
+```
 
 
 
 Jokalarien fitxategia:
 
-``python '
+```python
 
 [
 
@@ -1249,13 +1249,13 @@ Jokalarien fitxategia:
 
 ]
 
-``i
+```
 
 
 
 Fitxategia: `6.3 ETE:
 
-``python '
+```python
 
 taldeko import
 
@@ -1271,13 +1271,13 @@ Nire taldea.fitxaketa ("Gento", 11)
 
 NireTaldea.erakutsi ()
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Loaded: [{'dortsal': 10, 'nombre': 'Maradona'}, {'dorsal': 8, 'nombre': 'Pele'}]
 
@@ -1291,4 +1291,4 @@ Pele 8
 
 Gento 11
 
-``i
+```
