--- a/book_eu/07.md
+++ b/book_eu/07.md
@@ -35,7 +35,7 @@ Nahikoa da [python site] ra joatea (https://www.python.org) eta 3. bertsioaren i
 
 
 
-# #Kode editoreak
+## Kode editoreak
 
 
 
@@ -55,7 +55,7 @@ Koderako editore bat erabili nahi baduzu, aukera asko dituzu, baina honako hauek
 
 
 
-# #Test unitarioak
+## Test unitarioak
 
 Unitate-testak funtzioak ondo eginda daudela egiaztatzen duten programak dira. Funtsean, funtzioak betetzen dituzten eta emaitza zuzena dela egiaztatzen duten programak dira.
 Testak egiteko hainbat liburu-denda daude, nahiz eta Python-en `unittest 'lehenetsia dagoen, eta, beraz, ez dago ezer instalatu beharrik.
@@ -66,7 +66,7 @@ Demagun kalkulagailu bat irudikatzen duen klase hau dugula:
 
 
 
-``python '
+```python
 
 class Kalkulagailua:
 
@@ -92,7 +92,7 @@ def zatitu (self, a, b):
 
 return a/b
 
-``i
+```
 
 
 
@@ -103,7 +103,7 @@ Gelako funtzio bakoitzak kalkulagailuaren funtzio bakoitza egiaztatzen du. Nahi 
 
 
 
-``python '
+```python
 
 def test_suma (self):
 
@@ -111,13 +111,13 @@ c = kalkulagailua. Kalkulagailua ()
 
 self.assertEqual (c.batu (40, 2), 42)
 
-``i
+```
 
 
 
 Fitxategi `kalkulatzailea.test.ete:
 
-``python '
+```python
 
 import unittest
 
@@ -162,13 +162,13 @@ if __name__ = = '__main__':
 
 unittest.main ()
 
-``i
+```
 
 
 
 Orain nahikoa da testen fitxategia exekutatzea, eta hau ikusiko dugu:
 
-```kontsolamendu
+```console
 
 python3 kalkulagailua.test.py
 
@@ -184,11 +184,11 @@ Ran 4 test in 0.000s
 
 OK
 
-``i
+```
 
 
 
-# #Python proiektu bati hasiera ematen tokian-tokian
+## Python proiektu bati hasiera ematen tokian-tokian
 
 
 
@@ -200,7 +200,7 @@ Komando hauek sistemaren kontsolan idatzi beharko dituzu.
 
 
 
-```kontsolamendu
+```console
 
 pip3 instalatu birtualenv
 
@@ -215,17 +215,17 @@ Collecting distlib < 1, > = 0.3.1
 
 ...
 
-``i
+```
 
 
 
 Birtualenvekin proiektu berri bat sor dezakegu:
 
-```kontsolamendu
+```console
 
 birtualenv proiektua
 
-``i
+```
 
 
 
@@ -235,11 +235,11 @@ Jarraian, proiektuaren ingurune birtuala aktibatu behar dugu, honako hauek gauza
 
 
 
-```kontsolamendu
+```console
 
 source proiektua/bin/activate
 
-``i
+```
 
 
 
@@ -249,7 +249,7 @@ Horretarako, `requirements.txtere 'izeneko testu-fitxategi bat sortzea komeni da
 
 
 
-```kontsolamendu
+```console
 
 #Bertsio zehatz bat instalatzeko
 
@@ -267,7 +267,7 @@ Horretarako, `requirements.txtere 'izeneko testu-fitxategi bat sortzea komeni da
 
 #izena_paketea
 
-``i
+```
 
 
 
@@ -275,40 +275,40 @@ Adibidez, pygame eta testing pakete bat instalatu nahi baditugu, honako hauek ja
 
 
 
-```kontsolamendu
+```console
 
 pygame = = 1.9.6
 
 unittest
 
-``i
+```
 
 Eta gero pakete hori eta beste batzuk instalatu genitzake, komandoarekin adierazten ditugunak:
 
 
 
-```kontsolamendu
+```console
 
 source bin/activate
 pip3 instalatu -r requirements.txt
 
-``i
+```
 
 
 
 Beste aukera bat da pip3 duten beharrezko paketeak instalatzea:
 
-```kontsolamendu
+```console
 
 pip3 instalatu pygame
 
-``i
+```
 
 
 
 Instalatuta dagoela egiaztatuko dugu:
 
-```kontsolamendu
+```console
 
 pip3 list
 
@@ -324,23 +324,23 @@ setuptools 49.6.0
 
 wheel 0.35.1
 
-``i
+```
 
 Eta `freeze, `requirements.txt«fitxategian gordeko dugu:
 
 
 
-```kontsolamendu
+```console
 
 pip3 freeze > requirements.txt
 
-``i
+```
 
 
 
 Orain, pygame erabiliko duen fitxategi bat sor dezakegu:
 
-``python '
+```python
 
 import pygame
 
@@ -395,24 +395,24 @@ Done! Time to quit.
 
 pygame.quit ()
 
-``i
+```
 
 
 
 Honela jokatuko genuke:
 
-```kontsolamendu
+```console
 
 python3 game.py
 
-``i
+```
 
 
 
 Eta Python-en ingurune birtuala amaitzeko, nahikoa litzateke:
 
-``i
+```
 
 deactivate
 
-``i
+```
