--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -1,4 +1,4 @@
-#Baldintzak
+# Baldintzak
 
 Uneren batean, programek gauza bat edo beste egin behar dute, baldintza baten arabera. Adibidez, erabiltzaile batek datu oker bat sartzen badu, programa amaitu egingo da. Datu batek balio jakin bat badu, modu batera prozesatzen da, eta bestela, beste batera. Nola lortzen da portaera hori? Baldintzen bidez.
 
@@ -8,13 +8,13 @@ Baldintzak programazio-egiturak dira, eta aukera ematen digute kode bat baldintz
 
 
 
-# #if
+## if
 
 Baldintza bat egiteko egiturarik sinpleena `ifi 'da, eta itxura hau du:
 
 
 
-``python '
+```python
 
 if* baldintza*:
 
@@ -24,7 +24,7 @@ if* baldintza*:
 
 *...*
 
-``i
+```
 
 
 
@@ -36,7 +36,7 @@ Adibidez:
 
 
 
-``python '
+```python
 
 balioa = -2
 
@@ -46,26 +46,26 @@ print ("Balioa 0 baino txikiagoa da")
 
 print ("Programaren amaiera")
 
-``i
+```
 
 
 Honela geratuko litzateke:
 
 
 
-```kontsolamendu
+```console
 
 Balioa 0 baino txikiagoa da
 
 Programaren amaiera
 
-``i
+```
 
 Aldiz:
 
 
 
-``python '
+```python
 
 balioa = 5
 
@@ -75,7 +75,7 @@ print ("Balioa 0 baino txikiagoa da")
 
 print ("Programaren amaiera")
 
-``i
+```
 
 
 
@@ -83,11 +83,11 @@ Honela geratuko litzateke:
 
 
 
-```kontsolamendu
+```console
 
 Programaren amaiera
 
-``i
+```
 
 
 
@@ -97,13 +97,13 @@ Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: "ifi" aren barruko j
 
 
 
-1.0 ekitaldia
+1.0 ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. So negatiboa da, mezu bat erakutsi behar duzu kontsola bidez.
 
 
 
-``python '
+```python
 
 balioa = input ("Idatz ezazu zenbaki bat:")
 
@@ -115,22 +115,22 @@ print ("Negatiboa da")
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Idatz ezazu zenbaki bat: -5
 Negatiboa da
 
-``i
+```
 
 
 
-# #if else
+## if else
 
 IFarekin bloke bat sor dezakegu, baldintza bat betetzen bada bakarrik exekutatzen dena. Baina zer gertatzen da programak baldintza baten arabera gauza bat edo bestea egitea nahi badugu?
 
@@ -138,7 +138,7 @@ IFarekin bloke bat sor dezakegu, baldintza bat betetzen bada bakarrik exekutatze
 
 
 
-``python '
+```python
 
 if* baldintza*:
 
@@ -148,7 +148,7 @@ LKse:
 
 * jarraibideak*
 
-``i
+```
 
 
 
@@ -156,7 +156,7 @@ Adibidez:
 
 
 
-``python '
+```python
 
 izena = input ("Esadazu zure izena:")
 
@@ -168,7 +168,7 @@ LKse:
 
 print ("Ez duzu ezer sartu!")
 
-``i
+```
 
 
 
@@ -176,13 +176,13 @@ Horrelako zerbait ikus liteke, erabiltzaileak sartzen duenaren arabera:
 
 
 
-```kontsolamendu
+```console
 
 Esadazu zure izena: Ada
 
 Kaixo Ada
 
-``i
+```
 
 
 
@@ -190,23 +190,23 @@ Baina erabiltzaileak ezer idatzi gabe "jakin" sakatu besterik ez badu egiten:
 
 
 
-```kontsolamendu
+```console
 
 Esadazu zure izena:
 
 Ez duzu ezer sartu!
 
-``i
+```
 
 
 
-1.1 ekitaldia
+1.1 ariketa
 
 Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "agurra" bada, agur bat adierazi behar duzu; bestela, "ez dut ulertzen" dioen mezu bat erakutsi behar duzu.
 
 
 
-``python '
+```python
 
 testua = input ("Idatzi testu bat:")
 
@@ -221,29 +221,29 @@ print ("Ez dut ulertzen. ")
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Idatzi testu bat: ez dakit
 
 Ez dut ulertzen.
 
-``i
+```
 
 
 
-# #if elif else
+## if elif else
 
 Bada beste aldaera bat hainbat baldintza egiaztatu behar ditugunean. Horretarako, if-elif-else egitura dago:
 
 
 
-``python '
+```python
 
 if* 1 baldintza*:
 
@@ -261,7 +261,7 @@ LKse:
 
 * jarraibideak*
 
-``i
+```
 
 
 
@@ -269,7 +269,7 @@ Demagun hizkuntza desberdinetan agurtzeko gai den programa bat nahi dugula. Hone
 
 
 
-``python '
+```python
 
 hizkuntza = input ("Zer hizkuntza hitz egiten duzu?")
 
@@ -291,7 +291,7 @@ LKse:
 
 print ("Ez dut hizkuntza hori ezagutzen")
 
-``i
+```
 
 
 
@@ -299,12 +299,12 @@ Behar adina `hautetsi 'izan ditzakegu.
 
 
 
-1.2 ekitaldia
+1.2 ariketa
 Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "bihar" bada, "Egun on" mezua erakutsi behar duzu, testua "berandu" bada, "Arratsalde on" mezua erakutsi behar duzu, eta, bestela, "Gabon" mezua erakutsi behar duzu.
 
 
 
-``python '
+```python
 
 testua = input ("Idatzi testu bat:")
 
@@ -328,19 +328,19 @@ print ("Ez dut ulertzen. ")
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Idatzi testu bat: arratsaldez
 
 Arratsalde on.
 
-``i
+```
 
 
 
@@ -350,7 +350,7 @@ Sortu programa bat erabiltzaileari bi balio oso eskatzeko, alderatzeko eta panta
 
 
 
-``python '
+```python
 
 numero1 = input ("Sartu zenbaki bat:")
 
@@ -370,12 +370,12 @@ LKse:
 
 print (1. zenbakia, "berdin da", 2. zenbakia)
 
-``i
+```
 
 Emaitza:
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 5
 
@@ -383,21 +383,21 @@ Sartu beste zenbaki bat: 10
 
 5 10 baino txikiagoa da
 
-``i
+```
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-1.0 ekitaldia
+1.0 ariketa
 
 Sortu programa bat erabiltzaileari bi balio oso eskatuko dizkiona eta pantaila bidez erakutsiko duena lehenengoa bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu ( % `u) haien artean: 0 bada, multiploa izango da.
 
 
 
-``python '
+```python
 
 numero1 = input ("Sartu zenbaki bat:")
 
@@ -417,13 +417,13 @@ LKse:
 
 print (1. zenbakia, "EZ da multiploa", 2. zenbakia)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: 40
 
@@ -431,16 +431,16 @@ Sartu beste zenbaki bat: 4
 
 40 4ren multiploa da
 
-``i
+```
 
 
 
-1.1 ekitaldia
+1.1 ariketa
 
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egin hau: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -464,13 +464,13 @@ numero = -numero
 
 print ("Bihurketa:", zenbakia)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: -6
 
@@ -478,7 +478,7 @@ Sartu zenbaki bat: -6
 
 Bihurketa: 6
 
-``i
+```
 
 
 
@@ -488,7 +488,7 @@ Idatzi urteko hilabete bateko zenbakia eskatzen duen programa bat eta erakutsi z
 
 
 
-``python '
+```python
 
 mes = input ("Sartu urteko hilabete bat:")
 
@@ -545,19 +545,19 @@ LKse:
 
 print ("Hilabete ezezaguna")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu urteko hilabete bat: Ekaina
 
 30 egun
 
-``i
+```
 
 
 
@@ -567,7 +567,7 @@ Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan 
 
 
 
-``python '
+```python
 
 numero = input ("Sartu zenbaki bat:")
 
@@ -591,23 +591,23 @@ LKse:
 
 print (zenbakia, "bakoitia da")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zenbaki bat: -9
 
 - 9 bakoitia eta negatiboa da
 
-``i
+```
 
 
 
-1.4 ekitaldia
+1.4 ariketa
 
 
 
@@ -622,7 +622,7 @@ GMI 30 baino handiagoa bada, mezu hau agertuko da: "Obesitate-arazoa duzu".
 
 
 
-``python '
+```python
 
 pisua = input ("Sartu zure pisua:")
 
@@ -660,13 +660,13 @@ LKse:
 
 print ("Obesitate arazo bat duzu")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu zure pisua: 70
 
@@ -676,11 +676,11 @@ Zure imc: 23.66143861546782
 
 Ondo zaude
 
-``i
+```
 
 
 
-1.5 ekitaldia
+1.5 ariketa
 Sortu erabiltzaileari jokalari-dortsal bat eskatzen dion programa bat eta egin hau: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore-mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
 
 - Erabiltzaileak 1 tekleatu badu, testua "Atezaina" izango da
@@ -695,49 +695,33 @@ Sortu erabiltzaileari jokalari-dortsal bat eskatzen dion programa bat eta egin h
 
 
 
-``python '
+```python
+zenbakia = input("Sartu zenbakia: ")
+zenbakia = int(zenbakia)
 
-dortsala = input ("Dortsala sartu:")
-
-dortsala = int (dortsala)
-
-
-
-if dortsal > = 0 and dortsal < = 99:
-
-if dortsal = = 1:
-
-print ("Atezaina")
-
-elif dortsal > = 1 and dortsal < = 5:
-
-print ("Defentsa")
-
-elif dortsal > = 6 and dortsal < = 8 or dortsal = = 11:
-
-print ("Erdilaria")
-
-elif dortsal = = 9:
-
-print ("Aurrelaria")
-
-LKse:
-
-print ("Edozein")
-LKse:
-
-print ("Errorea, dortsala ez dago 0 eta 99 artean")
-
-``i
+if zenbakia >= 0 and zenbakia <= 99:
+  if zenbakia == 1:
+      print("Atari gizona")
+  elif zenbakia >= 1 and zenbakia <= 5:
+      print("Defentsa jokalaria")
+  elif zenbakia >= 6 and zenbakia <= 8 or zenbakia == 11:
+      print("Erdilari jokalaria")
+  elif zenbakia == 9:
+      print("Aurrelari jokalaria")
+  else:
+      print("Norbera")
+else:
+    print("Errorea, zenbakia ez dago 0 eta 99 artean")
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Dortsala sartu: 11
 
 Erdilaria
 
-``i
+```
