--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -8,29 +8,29 @@ Ordenagailu-programek oso gauza zailak egin ditzakete, baina, funtsean, datuak p
 
 
 
-# #Zerrendak
+## Zerrendak
 
 Zerrendak zenbakiz indexatutako datu-multzo bat dira. Hori da definizio oso formala, baina izenak berak esaten dizu zer diren: zerrenda bat! Datu motei buruzko kapituluan zerrendak aurkeztu genituen eta nola sortzen diren ikusi genuen:
 
 
 
-``python '
+```python
 
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
-``i
+```
 
 Gogoratu aurkibide baten bidez eskura ditzakezula elementuak:
 
 
 
-``python '
+```python
 
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
 print (hizkuntzak [2]) #Frantsesa
 
-``i
+```
 Zerrenda honela adieraz daiteke:
 
 
@@ -45,13 +45,13 @@ Zerrenda honela adieraz daiteke:
 
 
 
-3.0 ekitaldia
+3.0 ariketa
 
 Definitu izenen zerrenda bat eta erakutsi pantaila bidez:
 
 
 
-``python '
+```python
 
 izenak = ["Ada", "Bug", "Neko"]
 
@@ -61,27 +61,27 @@ print (izenak) # ["Ada", "Bug", "Neko"]
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 ["Ada", "Bug", "Neko"]
 
-``i
+```
 
 
 
-3.1 ekitaldia
+3.1 ariketa
 
 Sortu programa bat 5 zenbaki hamartarrekin definitzeko. Gero, sortu begizta bat zenbaki guztien batez bestekoa kalkulatzeko.
 
 
 
-``python '
+```python
 
 zenbakiak = [3.4, 2.7, 4.3, 6.6, 8.3]
 
@@ -101,76 +101,76 @@ batez bestekoa = batuketa/len (zenbakiak)
 
 print ("Batez bestekoa da:", media)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Batez bestekoa: 5.06000000000005
 
-``i
+```
 
 
 
-# #Zerrendatik zatiak atera
+## Zerrendatik zatiak atera
 
 Zenbakizko indizea erabiliz, zerrenda baten zatiak atera daitezke, zerrenda horren azpi-zerrenda bat sortuz. Adibidez, "zerrendako lehen hiru balioak nahi ditut", "4. zenbakitik 6.era" edo "azken biak nahi ditut". Horretarako, nahikoa da indize-tarte bat adieraztea:
 
 
 
-``python '
+```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 zenbakiak [0:4] # [1, 2, 3, 4]
 
 zenbakiak [5:8] # [6, 7, 8]
 
-``i
+```
 
 Lehen elementuak ere atera daitezke:
 
-``python '
+```python
 
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 [: 6] # [1, 2, 3, 4, 5, 6] zenbakiak
 
-``i
+```
 
 
 
 Edo azken balioak
 
-``python '
+```python
 
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 [-4:] # [6, 7, 8, 9] zenbakiak
 
-``i
+```
 
 Edo, besterik gabe, azkena:
 
-``python '
+```python
 
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 [-1] zenbakiak # [9]
 
-``i
+```
 
 
 
-# #Elementuak gehitu eta ezabatu
+## Elementuak gehitu eta ezabatu
 
 Zerrenda bati elementu bat gehitu nahi badiogu, nahikoa da funtzio hau erabiltzea:
 
 
 
-``python '
+```python
 
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
@@ -178,7 +178,7 @@ idiomas.append ("Italiera")
 
 print (hizkuntzak) # ["Ingelesa", "Gaztelania", "Frantsesa", "Italiera"]
 
-``i
+```
 
 
 
@@ -186,7 +186,7 @@ Eta elementu bat zerrendatik kendu nahi badugu, `l 'agindua erabil daiteke:
 
 
 
-``python '
+```python
 
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
@@ -194,7 +194,7 @@ hizkuntza [1]
 
 print (hizkuntzak) # ["Ingelesa", "Frantsesa"]
 
-``i
+```
 
 
 
@@ -202,12 +202,12 @@ Eta zerrendako elementu baten balioa ere alda daiteke:
 
 
 
-``python '
+```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
 hizkuntzak [2] = "Italiera"
 
-``i
+```
 
 
 
@@ -215,7 +215,7 @@ Eta gogoratu, zerrendan zehar joateko, begizta hau erabil dezakegu:
 
 
 
-``python '
+```python
 
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
@@ -223,7 +223,7 @@ for hizkuntza in hizkuntzak:
 
 print (hizkuntza)
 
-``i
+```
 
 
 
@@ -231,7 +231,7 @@ Aurkibidea erabiliz ere egin daiteke zerrenda. Horretarako, `rangea 'funtzioa er
 
 
 
-``python '
+```python
 
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 
@@ -239,7 +239,7 @@ for i in range (len (hizkuntzak)):
 
 print (hizkuntzak [i])
 
-``i
+```
 
 Dena den, indizea begiztaren barruan behar ez bada, hobe da zerrenda indizerik gabe egitea, aurreko adibidean egiten den bezala.
 
@@ -251,13 +251,13 @@ Ezagutu beharko zenituzke, baina berriro gogoratuko dizugu.
 
 
 
-3.2 ekitaldia
+3.2 ariketa
 
 Definitu izenen zerrenda bat, erakutsi pantaila bidez. Gehitu elementu bat eta erakutsi zerrenda pantailaz pantaila. Ondoren, zerrendatik elementu bat ezabatu eta zerrenda pantailaz pantaila erakusten du.
 
 
 
-``python '
+```python
 
 izenak = ["Ada", "Bug", "Neko"]
 
@@ -280,13 +280,13 @@ izenak [1]
 
 print (izenak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 ["Ada", "Bug", "Neko"]
 
@@ -294,11 +294,11 @@ Emaitza:
 
 ["Ada", "Neko", "Miranda"]
 
-``i
+```
 
 
 
-# #Hiztegiak
+## Hiztegiak
 
 Hiztegiak datu-multzoak dira, eta elementu bakoitzak gako bat eta balio bat ditu.
 
@@ -310,13 +310,13 @@ Adibidez, hiztegi bat defini dezakegu, hainbat pertsonaren adinak biltzen dituen
 
 
 
-``python '
+```python
 
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
 print (adinak ["Ada"]) # 14
 
-``i
+```
 
 Hiztegia honela adieraz daiteke:
 
@@ -330,13 +330,13 @@ Hiztegia honela adieraz daiteke:
 
 
 
-3.3 ekitaldia
+3.3 ariketa
 
 Defini ezazu telefonoak izeneko hiztegi bat, non lagun pare baten telefonoak gordeko dituzun. Gakoa lagunaren izena izango da, eta balioa, berriz, telefono-zenbakia.
 
 
 
-``python '
+```python
 
 telefonoak = {"Ada": 66555333, "Bug": 111000111}
 
@@ -349,13 +349,13 @@ for izena in telefonos.keys ():
 
 print (izena, telefonoak [izena])
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Bug: 111000111, 'Ada': 666555333}
 
@@ -363,7 +363,7 @@ Bug 111000111
 
 Ada 66555333
 
-``i
+```
 
 
 
@@ -371,7 +371,7 @@ Elementu berriak gehitzeko, balio berri bat esleitu daiteke:
 
 
 
-``python '
+```python
 
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
@@ -401,17 +401,17 @@ for izena in edades.keys ():
 
 print (izena, adinak [izena])
 
-``i
+```
 
 
 
-3.4 ekitaldia
+3.4 ariketa
 
 Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari datuak hiztegian beste sarrera bat sartzeko: izena eta telefonoa eskatu beharko dituzu, eta gero hiztegira gehitu.
 
 Amaieran, hiztegiko elementu guztiak erakusten ditu.
 
-``python '
+```python
 
 telefonoak = {"Ada": 66555333, "Bug": 111000111}
 
@@ -432,13 +432,13 @@ print (izena, telefonoak [izena])
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu izen bat: Neko
 
@@ -450,13 +450,13 @@ Neko 333222000
 
 Bug 111000111
 
-``i
+```
 
 
 
 Hiztegiko balioak ezabatu ditzakegu, honako funtzio honekin:
 
-``python '
+```python
 
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
@@ -466,7 +466,7 @@ print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14}
 
 print (adinak) # {'Neko': 2, 'Ada': 14}
 
-``i
+```
 
 
 
@@ -476,7 +476,7 @@ Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat e
 
 
 
-``python '
+```python
 
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 
@@ -484,13 +484,13 @@ for izena in edades.keys ():
 
 print (izena, adinak [izena])
 
-``i
+```
 
 Pantailaren arabera:
 
 
 
-```kontsolamendu
+```console
 
 Ada 14
 
@@ -498,16 +498,16 @@ Ada 14
 
 Neko 2
 
-``i
+```
 
 
 
-3.5 ekitaldia
+3.5 ariketa
 Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari izen bat, eta gero kendu elementu hori hiztegitik.
 
 Amaieran, hiztegiko elementu guztiak erakusten ditu.
 
-``python '
+```python
 
 telefonoak = {"Ada": 66555333, "Bug": 111000111}
 
@@ -525,19 +525,19 @@ for izena in telefonos.keys ():
 
 print (izena, telefonoak [izena])
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Sartu izen bat: Bug
 
 Ada 66555333
 
-``i
+```
 
 
 
@@ -547,7 +547,7 @@ Beste hizkuntza batzuetan, hiztegiei `hash 'edo `hashtables' esaten zaie.
 
 
 
-# #Datu konbinatuen egiturak
+## Datu konbinatuen egiturak
 
 Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak ere izan ditzakete!
 
@@ -557,18 +557,18 @@ Datu-egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun bate
 
 
 
-``python '
+```python
 
 laguna = {"izena": "Neko", "adina": 2}
 
-``i
+```
 
 
 Eta hainbat lagun izango dituen datu-egitura bat izan nahi baduzu? Kasu horretan, hiztegien zerrenda egin dezakezu:
 
 
 
-``python '
+```python
 
 lagunak = [
 
@@ -584,15 +584,15 @@ print (lagunak [1]) # {"izena": "Bug", "adina": 10}
 
 print (lagunak [2] ["izena"]) #Ada
 
-``i
+```
 
-3.6 ekitaldia
+3.6 ariketa
 
 Idatzi bezeroa izeneko hiztegi-zerrenda bat zehazten duen programa bat, gakoak dituena: izena, emaila eta adina. Programak zerrenda egin behar du eta bezero bakoitzaren izena eta adina erakutsi.
 
 
 
-``python '
+```python
 
 bezeroak = [
 
@@ -634,13 +634,13 @@ for bezeroa in bezeroak:
 
 print (f "{bezeroa ['izena']} {bezeroa ['adina']}")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Juan 39
 
@@ -648,14 +648,14 @@ Pedro 42
 
 Ana 37
 
-``i
+```
 
 
 Eta joko baten egoera, pertsonaiak eta objektuak bilduko dituen datu-egitura bat nahi baduzu? Hiztegi habiatu bat egin nezake, non gakoa pertsonaiaren izena den:
 
 
 
-``python '
+```python
 
 pantaila = {
 
@@ -671,7 +671,7 @@ pantaila = {
 
 print (pantaila ["Luigi"] ["bizitza"]) # 7
 
-``i
+```
 
 
 
@@ -687,24 +687,24 @@ Jarraian, testuetarako baliagarriak diren zenbait funtzio ikusiko ditugu, baina,
 
 
 
-# #Testuak zerrendak dira
+## Testuak zerrendak dira
 Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra-zerrenda edo -katea, eta honela tratatu dezakegu:
 
 
 
-``python '
+```python
 
 testua = "Kaixo naiz Ada"
 
 testua [1] # "o"
 
-``i
+```
 
 Testua zerrenda bat balitz bezala ere ibil dezakegu:
 
 
 
-``python '
+```python
 
 testua = "Ada"
 
@@ -714,11 +714,11 @@ for caracter in texto:
 
 print (karaktere)
 
-``i
+```
 
 Irteera hau izango litzateke:
 
-``i
+```
 
 A
 
@@ -726,7 +726,7 @@ d
 
 a
 
-``i
+```
 
 
 
@@ -734,19 +734,19 @@ Testu baten luzera ere jakin dezakegu, `len ()» funtzioarekin:
 
 
 
-``python '
+```python
 
 testua = "Neko maulla"
 
 len (testua) # 11
 
-``i
+```
 
 Baina zalantzarik izanez gero, interesgarriena da testutik nahi dugun zatia atera dezakegula, hasiera eta amaiera adierazita:
 
 
 
-``python '
+```python
 
 testua = "Python mola"
 
@@ -754,48 +754,48 @@ testua [0:6] # "Python"
 
 testua [7:12] # "mola"
 
-``i
+```
 
 Lehen karaktereak ere atera daitezke
 
-``python '
+```python
 
 testua = "Python mola"
 
 testua [: 6] # "Python"
 
-``i
+```
 
 
 
 Edo azken karaktereak
 
-``python '
+```python
 
 testua = "Python mola"
 
 testua [-4:] # "mola"
 
-``i
+```
 
 Edo, besterik gabe, azkena:
 
-``python '
+```python
 
 testua = "Python mola"
 
 [-1] # "a" testua
 
-``i
+```
 
 
 
-# #Letra larriak/Letra xeheak
+## Letra larriak/Letra xeheak
 Zenbait funtzio ditugu testua letra larriz edo xehez idazteko:
 
 
 
-``python '
+```python
 
 testua = "Irakasle Ada"
 
@@ -803,7 +803,7 @@ testu.upper () #IRAKASLE ADA
 
 testu.lower () #Irakasle Ada
 
-``i
+```
 
 
 
@@ -811,50 +811,50 @@ testu.lower () #Irakasle Ada
 
 
 
-``python '
+```python
 
 testua = "hau esaldi bat da"
 
 texto.title () #Hau Esaldi bat da
 
-``i
+```
 
 
 
-# #split: testutik zerrendara
+## split: testutik zerrendara
 
 split funtzio interesgarria da testu bat zatika zatitzea eta zerrenda bihurtzea:
 
 
 
-``python '
+```python
 
 testua = "zatoz nirekin, bizi nahi baduzu"
 
 hitzak = testua.split () # ["zatoz", "nirekin", "bai", "nahi duzu", "bizi"]
 
-``i
+```
 
 Besterik ezean, splita testuaren espazioetan mozten da. Baina beste edozein bereizle adieraz daiteke, adibidez:
 
 
 
-``python '
+```python
 
 testua = "Ada; Neko; Bug"
 
 izenak = testua.split (";") # [Ada "," Neko "," Bug "]
 
-``i
+```
 
 
 
-# #Bilaketak
+## Bilaketak
 Batzuetan, testu baten barruan hitz bat bilatzea gustatuko zaigu. Horretarako, find funtzioa erabil dezakegu. Hitza aurkituz gero, hitz hori zein posiziotan hasten den erakutsiko du. Aurkitzen ez baduzu, itzuli `-1.
 
 
 
-``python '
+```python
 
 hitzak = "Irakaslerik onena Ada da, zalantzarik gabe"
 
@@ -864,7 +864,7 @@ aurkitu = hitza.find ("Ada") # 22
 
 EzAurkitua = hitza.find ("xxx") # -1
 
-``i
+```
 
 
 
@@ -872,7 +872,7 @@ Testu bat nolabait hasten den jakin nahi badugu, `startswith ()» erabil daiteke
 
 
 
-``python '
+```python
 
 hitzak = "Python hizkuntza ona da"
 
@@ -880,13 +880,13 @@ hasi = hitza.startswith ("Py") #True
 
 hasi = hitza.startswith ("es") #False
 
-``i
+```
 
 
 
 Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith ()» erabil daiteke:
 
-``python '
+```python
 
 hitzak = "Python hizkuntza ona da"
 
@@ -894,11 +894,11 @@ acaba = palabra .endswith ("aje") #True
 
 acaba = palabra .startswith ("ajes") #False
 
-``i
+```
 
 
 
-# #Soberakinak ezabatu
+## Soberakinak ezabatu
 Testuak zuriuneekin edo ezabatu nahi ditugun beste karaktere batzuekin has edo buka daitezke, esaterako, lerro-jauziekin. Testu batetik soberan dauden zati horiek kentzeko, honako funtzio hauek erabil daitezke.
 
 
@@ -907,13 +907,13 @@ lstrip () -ekin, testuaren hasieran espazioak ezabatzen dira:
 
 
 
-``python '
+```python
 
 testua = "Espazioak ditut"
 
 garbia = testua.lstrip () # "Espazioak ditut"
 
-``i
+```
 
 
 
@@ -921,25 +921,25 @@ garbia = testua.lstrip () # "Espazioak ditut"
 
 
 
-``python '
+```python
 
 testua = "Espazioak ditut"
 
 garbia = testua.rstrip () # "Espazioak ditut"
 
-``i
+```
 
 
 
 Eta strip () delakoarekin bi aldeetako espazioak kenduko ditugu:
 
-``python '
+```python
 
 testua = "Espazioak ditut"
 
 garbia = testua.strip () # "Espazioak ditut"
 
-``i
+```
 
 
 
@@ -947,38 +947,38 @@ Besterik ezean, espazioak kentzen dira, baina kendu nahi dugun edozein testu adi
 
 
 
-``python '
+```python
 
 testua = "--Arloi-testua"
 
 garbia = testua.lstrip ("-") # "Testua gidoiarekin"
 
-``i
+```
 
 Fitxategi batetik edo kontsolatik testua irakurtzen dugunean ere, lerro-jauziak egiten ditugu:
 
 
 
-``python '
+```python
 testua = "Honek lerro-jauzi bat du\n"
 
 garbia = testua.rstrip ("\n")
 
-``i
+```
 
 
 
-# #Proposatutako ariketak
+## Proposatutako ariketak
 
 
 
-3.0 ekitaldia
+3.0 ariketa
 
 Idatz ezazu 5 zenbakiko zerrenda bat hasten duen programa bat (0ra hasitakoak), eskuz hasitako 5 izeneko beste bat eta 5 boolear balioko beste bat (false erara hasitakoak)
 
 
 
-``python '
+```python
 
 izenak = ["Frodo", "Sam", "Merrin", "Pippin"]
 
@@ -994,13 +994,13 @@ print (zenbakiak)
 
 print (boolearrak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 [Frodo, Sam, Merrin, Pippin]
 
@@ -1008,17 +1008,17 @@ Emaitza:
 
 [True, True, True, True, True]
 
-``i
+```
 
 
 
-3.1 ekitaldia
+3.1 ariketa
 
 Idatzi 10 zenbakiko zerrenda bat zehazten duen programa bat. Ondoren, begizta bat sortu behar duzu,** posizio bikoitietan 0 bat sartzeko.
 
 
 
-``python '
+```python
 
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
@@ -1034,26 +1034,26 @@ if i % 2 = = 0:
 
 print (zenbakiak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 [0, 2, 0, 4, 0, 6, 0, 8, 0, 10]
 
-``i
+```
 
 
 
-3.2 ekitaldia
+3.2 ariketa
 Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu bat erakusteko: (1) elementua sartu, (2) ezabatu, (3) erakutsi eta (4) irten. Menua erabiltzaileak 4. aukera sartzen ez duen bitartean erakutsi behar da. 1. aukera aukeratuz gero, edozein balioko push egingo da, 2 aukeratuz gero, pop egingo da, eta 3 aukeratuz gero, zerrendako edukia agertuko da.
 
 
 
-``python '
+```python
 
 zenbakiak = []
 
@@ -1097,13 +1097,13 @@ LKse:
 
 print ("Aukera ezezaguna")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Aukeratu aukera
 
@@ -1119,16 +1119,16 @@ Aukera ezazu: 3
 
 []
 
-``i
+```
 
 
 
-3.3 ekitaldia
+3.3 ariketa
 Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Orduan programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
 
 
 
-``python '
+```python
 
 esaldia = "
 
@@ -1150,13 +1150,13 @@ esaldia = esaldia + "" + hitza
 
 print ("Sortutako esaldia:", esaldia)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Idatzi hitz bat: Kaixo
 
@@ -1168,17 +1168,17 @@ Idatzi hitz bat:
 
 Kaixo, zer moduz?
 
-``i
+```
 
 
 
-3.4 ekitaldia
+3.4 ariketa
 
 Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio horrekin guztiarekin, interpolazioa edo kate-txantiloiak erabiliz.
 
 
 
-``python '
+```python
 
 izena = input ("Idatzi zure izena:")
 
@@ -1193,13 +1193,13 @@ mezua = f "{izena} duzu izena {lekua} (e) n jaio zinen {data}"
 
 print (mezua)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Idatzi zure izena: Ada
 
@@ -1209,17 +1209,17 @@ Idatzi zure jaioturtea: 2006
 
 Ada duzu izena, Tevergan jaio zinen 2006an.
 
-``i
+```
 
 
 
-3.5 ekitaldia
+3.5 ariketa
 
 Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du, eta, ondorioz, programak esaldi bera itzuliko du letra larriz:
 
 
 
-``python '
+```python
 
 esaldia = input ("Idatzi esaldi bat:")
 
@@ -1247,13 +1247,13 @@ LKse:
 
 print (hitza, "ez dago esaldian. ")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Idatzi esaldi bat: Zein ona den profa Ada
 
@@ -1261,16 +1261,16 @@ Idatzi esaldi horretako hitz bat: ona
 
 Zein ona den profa Ada
 
-``i
+```
 
 
 
-3.6 ekitaldia
+3.6 ariketa
 Sortu 5 izeneko zerrenda bat definitzen duen programa bat eta, ondoren, erabili begizta bat izenak banan-banan erakusteko.
 
 
 
-``python '
+```python
 
 izenak = ["Frodo", "Merrin", "Sam", "Pip", "Bilbo"]
 
@@ -1290,13 +1290,13 @@ print (izenak [i])
 
 
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Frodoa
 
@@ -1308,17 +1308,17 @@ Pip
 
 Bilbo
 
-``i
+```
 
 
 
-3.7 ekitaldia
+3.7 ariketa
 
 Sortu 10 zenbaki osoko zerrenda bat zehazten duen programa bat. Gero, beste begizta bat sortzen du, elementu bakoitza handitu eta erakusteko.
 
 
 
-``python '
+```python
 
 zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
 
@@ -1340,24 +1340,24 @@ print (zenbakiak)
 
 #Gehituak = ugari.map (zenbakia = > zenbakia + 1)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 [4, 6, -3, 3, 2, 5, 1, 7, 10, 9, 4]
 
-``i
+```
 
-3.8 ekitaldia
+3.8 ariketa
 Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen zehazteko. Errepikatutako bat aurkitzea nahikoa da.
 
 
 
-``python '
+```python
 
 zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
 
@@ -1393,25 +1393,25 @@ LKse:
 
 print ("Ez dago zenbaki errepikaturik")
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Zenbaki errepikatua dago
 
-``i
+```
 
-3.9 ekitaldia
+3.9 ariketa
 
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definituko duen programa bat. Gero, beste begizta bat sortu, zenbaki positiboak, negatiboak eta 0 direnak zenbatuko dituena.
 
 
 
-``python '
+```python
 
 zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, -9, 8, 3]
 
@@ -1446,13 +1446,13 @@ print ("Negatiboak:", negatiboak)
 
 print ("Zeroak:", zeroak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 Positiboak: 8
 
@@ -1460,29 +1460,29 @@ Negatiboak: 2
 
 Zeroak: 1
 
-``i
+```
 
 
 
-3.10 ekitaldia
+3.10 ariketa
 
 Sortu 5x10 elementuko bi dimentsioko zerrenda bat definituko duen programa bat. Zerrendako balioak ausazko zenbakiak erabiliz hasten dituen begizta bat sortzen du.
 
 Zenbaki aleatorioak sortzeko, `random«eta random.randint ()» funtzioa erabiltzen du liburutegiak, hemen erakusten den bezala:
 
-``python '
+```python
 
 import random
 
 random.randint (0, 30); # 0 eta 30 arteko ausazko zenbakia
 
-``i
+```
 
 Horren ondoren, sortu beste begizta bat, elementuren batean 15 zenbakia aurkituz gero begizta eten eta zer posiziotan dagoen erakutsiko duena.
 
 
 
-``python '
+```python
 
 import random
 
@@ -1517,17 +1517,17 @@ if matrizea [i] [j] = = 15:
 
 print ("Aurkitu 15 in", i,)
 
-``i
+```
 
 
 
-3.11 ekitaldia
+3.11 ariketa
 
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen proiektu bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak aztertzen ditu, indizeetan aurreko ekitaldiko "random," metodoa erabiliz. Gero emaitza erakusten du.
 
 
 
-``python '
+```python
 
 import random
 
@@ -1555,14 +1555,14 @@ zenbakiak [ausazko aurkibidea] = aurrekoa
 
 print (zenbakiak)
 
-``i
+```
 
 Emaitza:
 
 
 
-```kontsolamendu
+```console
 
 [5, 4, 11, 7, 1, -3, 0, 9, 7, 8]
 
-``i
+```
